--- a/config/locales/po/af/api.po
+++ b/config/locales/po/af/api.po
@@ -5,9 +5,9 @@
 # Translators:
 # Translators:
 # Christo  du Toit <christo@dutoit.co.uk>, 2014
-# Hannetjie <hana.strauss@gmail.com>, 2014
+# Johanna Strauss <hana.strauss@gmail.com>, 2014
 # Lewies van der Merwe <lewies.vander@gmail.com>, 2013
-# Wleroux <wnda.van.rooyen@gmail.com>, 2013-2014
+# Wanda le Roux <wnda.van.rooyen@gmail.com>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
@@ -16,8 +16,8 @@
 # Translators:
 # Anke Stoye <ankestoyeyouversion@gmail.com>, 2013
 # Christo  du Toit <christo@dutoit.co.uk>, 2014
-# Hannetjie <hana.strauss@gmail.com>, 2014
-# Wleroux <wnda.van.rooyen@gmail.com>, 2013-2014
+# Johanna Strauss <hana.strauss@gmail.com>, 2014
+# Wanda le Roux <wnda.van.rooyen@gmail.com>, 2013-2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
 #
@@ -25,10 +25,11 @@
 # Translators:
 # CathyPutter <cputter.80@gmail.com>, 2013
 # CathyPutter <cputter.80@gmail.com>, 2013
-# Hannetjie <hana.strauss@gmail.com>, 2014
+# Johanna Strauss <hana.strauss@gmail.com>, 2014
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
-# margastander <margastander@gmail.com>, 2013
-# margastander <margastander@gmail.com>, 2013
+# Labeeqah Rawood <labeeqah.rawood@outlook.com>, 2014
+# Marga Stander <margastander@gmail.com>, 2013
+# Marga Stander <margastander@gmail.com>, 2013
 # Marius Pretorius <marius.cross@gmail.com>, 2013
 #, fuzzy
 msgid ""
@@ -38,7 +39,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
 "PO-Revision-Date: 2014-05-21 05:41+0000\n"
-"Last-Translator: Hannetjie <hana.strauss@gmail.com>\n"
+"Last-Translator: Johanna Strauss <hana.strauss@gmail.com>\n"
 "Language-Team: Afrikaans (http://www.transifex.com/projects/p/yv-backend/language/af/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -50,7 +51,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
 "PO-Revision-Date: 2014-05-21 05:41+0000\n"
-"Last-Translator: Hannetjie <hana.strauss@gmail.com>\n"
+"Last-Translator: Johanna Strauss <hana.strauss@gmail.com>\n"
 "Language-Team: Afrikaans (http://www.transifex.com/projects/p/yv-backend/language/af/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -61,8 +62,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-21 05:51+0000\n"
-"Last-Translator: Hannetjie <hana.strauss@gmail.com>\n"
+"PO-Revision-Date: 2014-07-11 15:01+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Afrikaans (http://www.transifex.com/projects/p/yv-backend/language/af/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -282,6 +283,9 @@ msgstr ""
 "Ek geniet die Bybel Toep van YouVersion en het gedink jy mag dalk ook. Ek maak die Bybel veel meer oop deesdae omdat dit so maklik is om te lees, kyk, luister en te deel. Dit het selfs leesplanne wat 'n gedeelte van die Bybel vir my kies om daagliks te lees.\n"
 "\n"
 "Jy kan dit ook (gratis) kry! op basies enige mobiele toestel hier:"
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>Hi!</p><p>Ek gebruik die Bybel App van YouVersion en ek wou dit met jou deel. As jy nuut met die app is, dis `n eenvoudige manier om die skoonheid en die waarheid van die Bybel in die alledaagse lewe te bring. </p><p><strong>Kry die Bybel App:</strong>  lees, kyk, luister, en deel op jou smartphone of tablet, en aanlyn op Bible.com</p><p><strong>Stel Jou Rekening op:</strong> skryf aan die Bybel Planne en toegang boekmerke, hoogtepunte, en notas regoor toestelle</p><p><strong>Voeg Vriende (Soos My!):</strong> verken en bespreek die Bybel met mense wat jy omgee</p><p> dis al in die Bybel App—begin hier: </p>"
 
 msgid "share.invite_twitter"
 msgstr "Die Bybel Toep van @YouVersion het 'n permanente plekkie op my tuisskerm. Lees, kyk, luister en deel...alles in 'n gratis toepassing:"
