--- a/config/locales/po/ar/api.po
+++ b/config/locales/po/ar/api.po
@@ -5,7 +5,7 @@
 # Translators:
 # Translators:
 # Lojaine Arabi <loonita@gmail.com>, 2013-2014
-# minafarid <farid.minageorges@gmail.com>, 2014
+# mina georges farid <farid.minageorges@gmail.com>, 2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
@@ -14,7 +14,7 @@
 # Translators:
 # Amer Zakhour <jemeni4u@gmail.com>, 2013
 # Lojaine Arabi <loonita@gmail.com>, 2014
-# minafarid <farid.minageorges@gmail.com>, 2014
+# mina georges farid <farid.minageorges@gmail.com>, 2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
 #
@@ -29,7 +29,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
 "PO-Revision-Date: 2014-05-27 22:41+0000\n"
-"Last-Translator: minafarid <farid.minageorges@gmail.com>\n"
+"Last-Translator: mina georges farid <farid.minageorges@gmail.com>\n"
 "Language-Team: Arabic (http://www.transifex.com/projects/p/yv-backend/language/ar/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -41,7 +41,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
 "PO-Revision-Date: 2014-05-27 22:51+0000\n"
-"Last-Translator: minafarid <farid.minageorges@gmail.com>\n"
+"Last-Translator: mina georges farid <farid.minageorges@gmail.com>\n"
 "Language-Team: Arabic (http://www.transifex.com/projects/p/yv-backend/language/ar/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
