--- a/config/locales/po/bg/api.po
+++ b/config/locales/po/bg/api.po
@@ -18,8 +18,8 @@
 #
 # Translators:
 # Translators:
-# fluxa <fluxaa@gmail.com>, 2013
-# fluxa <fluxaa@gmail.com>, 2013
+# Angel Maleshkov <fluxaa@gmail.com>, 2013
+# Angel Maleshkov <fluxaa@gmail.com>, 2013
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
 #, fuzzy
 msgid ""
@@ -53,7 +53,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
 "PO-Revision-Date: 2014-05-07 20:04+0000\n"
-"Last-Translator: fluxa <fluxaa@gmail.com>\n"
+"Last-Translator: Angel Maleshkov <fluxaa@gmail.com>\n"
 "Language-Team: Bulgarian (http://www.transifex.com/projects/p/yv-backend/language/bg/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
