--- a/config/locales/po/ca/api.po
+++ b/config/locales/po/ca/api.po
@@ -4,24 +4,25 @@
 # Translators:
 # Translators:
 # Translators:
-# doktorkampi, 2014
-# mguerola <mireia.guerola@gmail.com>, 2013
+# Ferran Campillo López, 2014
+# Mireia Guerola Carbó <mireia.guerola@gmail.com>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
 # Translators:
 # Translators:
 # Translators:
-# mguerola <mireia.guerola@gmail.com>, 2013-2014
+# Mireia Guerola Carbó <mireia.guerola@gmail.com>, 2013-2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
 #
 # Translators:
 # Translators:
-# doktorkampi, 2013
-# doktorkampi, 2013
-# mguerola <mireia.guerola@gmail.com>, 2013
-# mguerola <mireia.guerola@gmail.com>, 2013
+# Ferran Campillo López, 2013
+# Ferran Campillo López, 2013
+# Ferran Campillo López, 2013-2014
+# Mireia Guerola Carbó <mireia.guerola@gmail.com>, 2013
+# Mireia Guerola Carbó <mireia.guerola@gmail.com>, 2013
 #, fuzzy
 msgid ""
 msgstr ""
@@ -29,8 +30,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-12 17:10+0000\n"
-"Last-Translator: doktorkampi\n"
+"PO-Revision-Date: 2014-06-02 20:51+0000\n"
+"Last-Translator: Mireia Guerola Carbó <mireia.guerola@gmail.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/projects/p/yv-backend/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -41,8 +42,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-02-24 21:20+0000\n"
-"Last-Translator: mguerola <mireia.guerola@gmail.com>\n"
+"PO-Revision-Date: 2014-06-02 21:01+0000\n"
+"Last-Translator: Mireia Guerola Carbó <mireia.guerola@gmail.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/projects/p/yv-backend/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -53,7 +54,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 16:21+0000\n"
+"PO-Revision-Date: 2014-07-11 15:01+0000\n"
 "Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Catalan (http://www.transifex.com/projects/p/yv-backend/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -131,6 +132,9 @@ msgstr "{name} ha mirat <b>{title}</b>"
 msgid "moment.video.watched.self.title"
 msgstr "Has mirat <b>{title}</b>"
 
+msgid "moment.system.find_friends.title"
+msgstr "L'App de la Bíblia és encara millor amb Amics. Cerca en els teus Contactes per trobar-hi Amics."
+
 msgid "notifications.friendships.offer"
 msgstr "{name} vol ser el teu amic a YouVersion"
 
@@ -149,6 +153,15 @@ msgstr "{name} ha comentat el teu marcador: \"{comment}\""
 msgid "notifications.comments.moment.mine.highlight"
 msgstr "{name} ha comentat la teva marca: \"{comment}\""
 
+msgid "notifications.comments.moment.mine.plan_activity"
+msgstr "{name} ha comentat el teu Pla: “{comment}”"
+
+msgid "notifications.comments.moment.mine.plan_activity.push"
+msgstr "{name} ha comentat el teu Pla de la Bíblia: “{comment}”"
+
+msgid "notifications.comments.moment.mine.friendship"
+msgstr "{name} ha comentat la teva nova amistat amb {friend_name}: “{comment}”"
+
 msgid "notifications.comments.moment.mine.note"
 msgstr "{name} ha comentat la teva nota: \"{comment}\""
 
@@ -157,6 +170,15 @@ msgstr "A {name} li agrada el teu marcador, {reference_human}"
 
 msgid "notifications.likes.moment.mine.highlight"
 msgstr "A {name} li agrada el que has ressaltat, {reference_human}"
+
+msgid "notifications.likes.moment.mine.plan_activity"
+msgstr "A {name} li agrada la teva activitat amb els Plans"
+
+msgid "notifications.likes.moment.mine.plan_activity.push"
+msgstr "A {name} li agrada la teva activitat amb els Plans de la Bíblia"
+
+msgid "notifications.likes.moment.mine.friendship"
+msgstr "A {name} li agrada la teva nova amistat amb {friend_name}"
 
 msgid "notifications.likes.moment.mine.note.reference"
 msgstr "A {name} li agrada la teva nota a {reference_human}"
@@ -173,11 +195,29 @@ msgstr "{moment_owner_name} també ha comentat el seu marcador: “{comment}”"
 msgid "notifications.comments.moments.friend.bookmark"
 msgstr "{commenter_name} també ha comentat el marcador de {moment_owner_name}: “{comment}”"
 
+msgid "notifications.comments.moments.friend.owner.friendship"
+msgstr "{moment_owner_name} també ha comentat la seva nova amistat amb {friend_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.friendship"
+msgstr "{commenter_name} també ha comentat la nova amistat de {moment_owner_name} amb {friend_name}: “{comment}”"
+
 msgid "notifications.comments.moments.friend.owner.highlight"
 msgstr "{moment_owner_name} també ha comentat la seva marca: “{comment}”"
 
 msgid "notifications.comments.moments.friend.highlight"
 msgstr "{commenter_name} també ha comentat la marca de {moment_owner_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity"
+msgstr "{moment_owner_name} també ha comentat el seu Pla: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity"
+msgstr "{commenter_name} també ha comentat el Pla de {moment_owner_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity.push"
+msgstr "{moment_owner_name} també ha comentat el seu Pla de la Bíblia: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity.push"
+msgstr "{commenter_name} també ha comentat el Pla de la Bíblia de {moment_owner_name}: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.note"
 msgstr "{moment_owner_name} també ha comentat la seva nota: “{comment}”"
@@ -199,6 +239,18 @@ msgstr "{name} ha afegit una nota, “{title}”"
 
 msgid "notifications.moments.create.note.no_title_no_reference"
 msgstr "{name} ha afegit una nota"
+
+msgid "notifications.moments.create.plan_subscription"
+msgstr "{name} ha començat un nou Pla, {title}"
+
+msgid "notifications.moments.create.plan_subscription.push"
+msgstr "{name} ha començat un nou Pla de la Bíblia, {title}"
+
+msgid "notifications.moments.create.plan_completion"
+msgstr "{name} ha acabat el seu Pla, {title}"
+
+msgid "notifications.moments.create.plan_completion.push"
+msgstr "{name} ha acabat el seu Pla de la Bíblia, {title}"
 
 #. TRANSLATORS: Plural test
 msgid "notifications.friendships.count"
@@ -223,6 +275,9 @@ msgstr ""
 "Estic gaudint de l'aplicació de la Bíblia de YouVersion i crec que a tu segurament també t'agradaria. Darrerament estic obrint molt més la Bíblia perquè és molt fàcil de llegir, mirar, escoltar i compartir. Fins i tot té Plans, que tenen una selecció de la Bíblia ben escollida i que m'espera cada dia.\n"
 "\n"
 "La pots aconseguir (gratis!) per gairebé qualsevol dispositiu mòbil aquí:"
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>Hola!</p><p>Estic utilitzant l'Aplicació de la Bíblia i volia compartir-ho amb tu. Si acabes d'entrar-hi en contacte, veuràs que com és de senzill portar la bellesa i veritat de la Bíblia al teu dia a dia. </p><p><strong>Aconsegueix l'Aplicació de la Bíblia:</strong> llegeix, mira, escolta i comparteix al teu smartphone o tablet, i a la versió en línia a Bible.com</p><p><strong>Configura el teu compte:</strong> subscriu-te als Plans de la Bíblia i accedeix a marcadors, subratllats i notes mitjançant els diferents dispositius</p><p><strong>Agrega amics (Com jo!):</strong> explora i parlar de la Bíblia amb les persones que t'importen</p><p>Tot a l'Aplicació de la Bíblia —comença aquí: </p>"
 
 msgid "share.invite_twitter"
 msgstr "L'aplicació de la Bíblia de YouVersion té un lloc permanent a la meva pantalla inicial. Llegeix, mira, escolta i comparteix...tot en una aplicació gratuïta:"
