--- a/config/locales/po/cs/api.po
+++ b/config/locales/po/cs/api.po
@@ -4,32 +4,34 @@
 # Translators:
 # Translators:
 # Translators:
-# marek.lisy <marek.lisy@centrum.cz>, 2014
-# marek.lisy <marek.lisy@centrum.cz>, 2014
+# Marek Lisý <marek.lisy@centrum.cz>, 2014
+# Marek Lisý <marek.lisy@centrum.cz>, 2014
 # Radek Ćmiel <radek@element.cx>, 2014
-# liveguard <youversion@jezkovi.com>, 2013
+# Tomáš Ježek <youversion@jezkovi.com>, 2013
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
 # Translators:
 # Translators:
 # Translators:
-# marek.lisy <marek.lisy@centrum.cz>, 2014
-# marek.lisy <marek.lisy@centrum.cz>, 2014
-# markywashy <iamcrazyketa@yahoo.com>, 2014
-# liveguard <youversion@jezkovi.com>, 2013-2014
+# Marek Lisý <marek.lisy@centrum.cz>, 2014
+# Marek Lisý <marek.lisy@centrum.cz>, 2014
+# Marketa Washburn <iamcrazyketa@yahoo.com>, 2014
+# Radek Ćmiel <radek@element.cx>, 2014
+# Tomáš Ježek <youversion@jezkovi.com>, 2013-2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
 #
 # Translators:
 # Translators:
-# Aszturc <adam.szturc@gmail.com>, 2014
-# marek.lisy <marek.lisy@centrum.cz>, 2013
-# marek.lisy <marek.lisy@centrum.cz>, 2013
-# marek.lisy <marek.lisy@centrum.cz>, 2014
-# Milan Kramoliš <timdruhym@gmail.com>, 2013
-# Milan Kramoliš <timdruhym@gmail.com>, 2013
-# Radek Ćmiel <radek@element.cx>, 2013
+# Adam Szturc <adam.szturc@gmail.com>, 2014
+# Marek Lisý <marek.lisy@centrum.cz>, 2013
+# Marek Lisý <marek.lisy@centrum.cz>, 2013
+# Marek Lisý <marek.lisy@centrum.cz>, 2013-2014
+# Milan Kramolis <timdruhym@gmail.com>, 2013
+# Milan Kramolis <timdruhym@gmail.com>, 2013
+# Radek Ćmiel <radek@element.cx>, 2013-2014
+# Tomáš Ježek <youversion@jezkovi.com>, 2014
 #, fuzzy
 msgid ""
 msgstr ""
@@ -37,8 +39,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-20 18:23+0000\n"
-"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
+"PO-Revision-Date: 2014-07-02 10:10+0000\n"
+"Last-Translator: Radek Ćmiel <radek@element.cx>\n"
 "Language-Team: Czech (http://www.transifex.com/projects/p/yv-backend/language/cs/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -49,8 +51,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-20 21:04+0000\n"
-"Last-Translator: liveguard <youversion@jezkovi.com>\n"
+"PO-Revision-Date: 2014-07-02 10:00+0000\n"
+"Last-Translator: Radek Ćmiel <radek@element.cx>\n"
 "Language-Team: Czech (http://www.transifex.com/projects/p/yv-backend/language/cs/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -61,8 +63,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-08 08:50+0000\n"
-"Last-Translator: marek.lisy <marek.lisy@centrum.cz>\n"
+"PO-Revision-Date: 2014-07-11 15:01+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Czech (http://www.transifex.com/projects/p/yv-backend/language/cs/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -107,13 +109,13 @@ msgid "moment.bible.download.self.title"
 msgstr "Stáhli jste překlad <b>{version}</b>"
 
 msgid "moment.plan_subscription.title"
-msgstr "{name} začal plán"
+msgstr "{name} začal/a nový plán"
 
 msgid "moment.plan_subscription.self.title"
-msgstr "Začali jste plán"
+msgstr "Začali jste nový plán"
 
 msgid "moment.plan_segment_completion.title"
-msgstr "{name} dokončil den <b>{segment}</b> plánu <b>{title}</b>"
+msgstr "{name} dokončil/a den <b>{segment}</b> plánu <b>{title}</b>"
 
 msgid "moment.plan_segment_completion.self.title"
 msgstr "Dokončili jste den  <b>{segment}</b> plánu <b>{title}</b>"
@@ -161,13 +163,13 @@ msgid "notifications.comments.moment.mine.highlight"
 msgstr "{name} přidal komentář k vašemu zvýraznění: “{comment}”"
 
 msgid "notifications.comments.moment.mine.plan_activity"
-msgstr "{name} přidal komentář k vašemu plánu: “{comment}”"
+msgstr "{name} přidal/a komentář k vašemu plánu: “{comment}”"
 
 msgid "notifications.comments.moment.mine.plan_activity.push"
-msgstr "{name} komentoval váš plán čtení Bible: “{comment}”"
+msgstr "{name} okomentoval/a váš plán čtení Bible: “{comment}”"
 
 msgid "notifications.comments.moment.mine.friendship"
-msgstr "{name} přidal komentář k vašemu novému přátelství s {friend_name}: “{comment}”"
+msgstr "{name} přidal/a komentář k vašemu novému přátelství s {friend_name}: “{comment}”"
 
 msgid "notifications.comments.moment.mine.note"
 msgstr "{name} přidal komentář k vaší poznámce: “{comment}”"
@@ -179,13 +181,13 @@ msgid "notifications.likes.moment.mine.highlight"
 msgstr "Uživateli {name} se líbí vaše označení, {reference_human}"
 
 msgid "notifications.likes.moment.mine.plan_activity"
-msgstr "{name} se líbí váš pokrok plánu"
+msgstr "uživ. {name} se líbí váš pokrok ve čtení"
 
 msgid "notifications.likes.moment.mine.plan_activity.push"
-msgstr "{name} se líbí pokrok čtení Bible"
+msgstr "uživ. {name} se líbí váš pokrok ve čtení Bible"
 
 msgid "notifications.likes.moment.mine.friendship"
-msgstr "{name} se líbí vaše nové přátelství s {friend_name}"
+msgstr "uživ. {name} se líbí vaše nové přátelství s {friend_name}"
 
 msgid "notifications.likes.moment.mine.note.reference"
 msgstr "Uživateli {name} se líbí vaše poznámka na {reference_human}"
@@ -203,10 +205,10 @@ msgid "notifications.comments.moments.friend.bookmark"
 msgstr "{commenter_name} také okomentoval záložku uživatele {moment_owner_name}: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.friendship"
-msgstr "{moment_owner_name} také přidal komentář k přátelství s {friend_name}: “{comment}”"
+msgstr "{moment_owner_name} přidal/a komentář k přátelství s {friend_name}: “{comment}”"
 
 msgid "notifications.comments.moments.friend.friendship"
-msgstr "{commenter_name} také přidal komentář k {moment_owner_name} novému přátelství s {friend_name}: “{comment}”"
+msgstr "{commenter_name} přidal/a komentář k novému přátelství uživ. {moment_owner_name} s uživ. {friend_name}: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.highlight"
 msgstr "{moment_owner_name} také okomentoval svoje zvýraznění: “{comment}”"
@@ -215,16 +217,16 @@ msgid "notifications.comments.moments.friend.highlight"
 msgstr "{commenter_name} také okomentoval zvýraznění uživatele {moment_owner_name}: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.plan_activity"
-msgstr "{moment_owner_name} také komentoval plán čtení: “{comment}”"
+msgstr "{moment_owner_name} okomentoval/a plán čtení: “{comment}”"
 
 msgid "notifications.comments.moments.friend.plan_activity"
-msgstr "{commenter_name} také komentoval plán {moment_owner_name}: “{comment}”"
+msgstr "{commenter_name} okomentoval/a plán {moment_owner_name}: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.plan_activity.push"
-msgstr "{moment_owner_name} také komentoval plán čtení Bible: “{comment}”"
+msgstr "{moment_owner_name} okomentoval/a plán čtení Bible: “{comment}”"
 
 msgid "notifications.comments.moments.friend.plan_activity.push"
-msgstr "{commenter_name} také komentoval {moment_owner_name} plán čtení Bible: “{comment}”"
+msgstr "{commenter_name} okomentoval/a {moment_owner_name} plán čtení Bible: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.note"
 msgstr "{moment_owner_name} také okomentoval svoji poznámku: “{comment}”"
@@ -248,16 +250,16 @@ msgid "notifications.moments.create.note.no_title_no_reference"
 msgstr "{name} přidal poznámku"
 
 msgid "notifications.moments.create.plan_subscription"
-msgstr "{name} začal nový plán, {title}"
+msgstr "Uživatel {name} začal nový plán, {title}"
 
 msgid "notifications.moments.create.plan_subscription.push"
-msgstr "{name} začal nový plán čtení Bible, {title}"
+msgstr "Uživatel {name} začal nový plán čtení Bible, {title}"
 
 msgid "notifications.moments.create.plan_completion"
-msgstr "{name} dokončil plán čtení, {title}"
+msgstr "Uživatel {name} dokončil plán čtení, {title}"
 
 msgid "notifications.moments.create.plan_completion.push"
-msgstr "{name} dokončil plán čtení Bible, {title}"
+msgstr "Uživatel {name} dokončil plán čtení Bible, {title}"
 
 #. TRANSLATORS: Plural test
 msgid "notifications.friendships.count"
@@ -276,22 +278,33 @@ msgid "share.invite_sms"
 msgstr "Už máš aplikaci Bible od YouVersion? Mě se moc líbí a myslím si, že by se mohla líbit i Tobě. Tady je odkaz:"
 
 msgid "share.invite_email_subject"
-msgstr "Máš už aplikaci Bible?"
+msgstr "Nainstaluj si aplikaci Bible, kterou používám!"
 
 msgid "share.invite_email_body"
 msgstr ""
-"Hodně se mi líbí aplikace Bible od YouVersion a myslím si, že by se mohla líbit i tobě. Otevírám teď Bibli mnohem častěji, protože je teď snadné si ji číst, dívat se na videa, poslouchat ji i sdílet. Obsahuje dokonce i Plány čtení, které mají vybrané pasáže Bible a čekají na přečtení každý den.\n"
+"Ahoj!\n"
 "\n"
-"Můžeš si ji také stáhnout (zdarma!) do téměř jakéhokoliv mobilního zařízení:"
+"Používám aplikaci Bible od YouVersion a myslím si, že by se mohla líbit i tobě. Pokud jsi o této aplikaci ještě neslyšel, tak je velmi snadné ji používat. Každý den zažiješ krásu a pravdu Božího slova ve svém životě.\n"
+"\n"
+"Stáhni si aplikaci Bible: čti, sleduj, poslouchej a sdílej ze svého smartphonu či tabletu, nebo vše používej online na adrese Bible.com.\n"
+"\n"
+"Nastav si účet: přihlas se k odběru plánu čtení Bible a měj tak přístup k záložkám, zvýrazněním a poznámkám na všech svých zařízeních.\n"
+"\n"
+"Přidávej si přátelé (stejně jako mě!): objevuj a komentuj různé věci z Bible s lidmi, kterým na tobě záleží.\n"
+"\n"
+"To vše v aplikaci Bible - začni zde:"
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>Ahoj!</p><p>Používám aplikaci YouVersion Bible a chci ji s tebou sdílet. Pokud ještě aplikaci neznáš, pak ti můžu říct, jak je snadné každý den objevovat krásy a pravdy z Bible. </p><p><strong>Stáhni si aplikaci Bible:</strong> čti, sleduj, poslouchej a sdílej ze svého smartphonu či tabletu, nebo vše používej online na adrese Bible.com</p><p><strong>Nastav si účet:</strong> přihlas se k odběru plánu čtení Bible a měj tak přístup k záložkám, zvýrazněním a poznámkám na všech svých zařízeních</p><p><strong>Přidávej si přátelé (stejně jako mě!):</strong> objevuj a komentuj různé věci z Bible s lidmi, kterým na tobě záleží</p><p>Vše máš k dispozici v aplikaci Bible - začínáme zde: </p>"
 
 msgid "share.invite_twitter"
-msgstr "Aplikace Bible od @YouVersion má své stálé místo na mé domácí obrazovce. Mohu číst, dívat se, poslouchat a sdílet... vše v aplikaci zdarma:"
+msgstr "Aplikace Bible od @YouVersion má stálé místo na mé domovské obrazovce. Mohu číst, sledovat videa, poslouchat audio a sdílet... Zcela zdarma:"
 
 msgid "share.invite_twitter_direct"
 msgstr "Už máš aplikaci Bible od @YouVersion? Mě se moc líbí a myslím si, že by se líbila i Tobě. Tady je odkaz:"
 
 msgid "share.invite_facebook"
-msgstr "Mám moc rád aplikaci Bible! Pomohla mi k tomu, aby se Bible stala každodenní součástí mého života. Můžu tam zvýraznit verše, poslechnout si audio Bible, udělat si poznámky, číst podle plánu.. .dokonce sledovat videa! Určitě si ji můžete hned stáhnout (je zdarma): "
+msgstr "Mám moc rád aplikaci Bible! Pomohla mi k tomu, aby se Bible stala každodenní součástí mého života. Můžu tam zvýraznit verše, poslechnout si audio Bible, udělat si poznámky, číst podle plánu... dokonce sledovat videa! Určitě si ji můžete hned stáhnout (je zdarma): "
 
 msgid "share.invite_facebook_direct"
 msgstr "Už máš aplikaci Bible? Mně se moc líbí a myslím si, že by se líbila i Tobě. Tady je odkaz:"
