--- a/config/locales/po/da/api.po
+++ b/config/locales/po/da/api.po
@@ -4,21 +4,21 @@
 # Translators:
 # Translators:
 # Translators:
-# BjornPavlak <bjoern.pavlak@gmail.com>, 2013-2014
+# Bjørn Pavlak <bjoern.pavlak@gmail.com>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
 # Translators:
 # Translators:
 # Translators:
-# BjornPavlak <bjoern.pavlak@gmail.com>, 2013-2014
+# Bjørn Pavlak <bjoern.pavlak@gmail.com>, 2013-2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
 #
 # Translators:
 # Translators:
-# BjornPavlak <bjoern.pavlak@gmail.com>, 2013
-# BjornPavlak <bjoern.pavlak@gmail.com>, 2013
+# Bjørn Pavlak <bjoern.pavlak@gmail.com>, 2013
+# Bjørn Pavlak <bjoern.pavlak@gmail.com>, 2013-2014
 #, fuzzy
 msgid ""
 msgstr ""
@@ -27,7 +27,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
 "PO-Revision-Date: 2014-05-20 21:17+0000\n"
-"Last-Translator: BjornPavlak <bjoern.pavlak@gmail.com>\n"
+"Last-Translator: Bjørn Pavlak <bjoern.pavlak@gmail.com>\n"
 "Language-Team: Danish (http://www.transifex.com/projects/p/yv-backend/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -39,7 +39,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
 "PO-Revision-Date: 2014-05-20 21:22+0000\n"
-"Last-Translator: BjornPavlak <bjoern.pavlak@gmail.com>\n"
+"Last-Translator: Bjørn Pavlak <bjoern.pavlak@gmail.com>\n"
 "Language-Team: Danish (http://www.transifex.com/projects/p/yv-backend/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -50,8 +50,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 17:03+0000\n"
-"Last-Translator: BjornPavlak <bjoern.pavlak@gmail.com>\n"
+"PO-Revision-Date: 2014-07-11 15:01+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Danish (http://www.transifex.com/projects/p/yv-backend/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -264,13 +264,24 @@ msgid "share.invite_sms"
 msgstr "Har du Bibel App´en fra YouVersion? Jeg elsker den og tror at det vil du også gøre. Her er et link:"
 
 msgid "share.invite_email_subject"
-msgstr "Har du Bible App´en?"
+msgstr "Brug Bibel App ligesom mig"
 
 msgid "share.invite_email_body"
 msgstr ""
-"Jeg har stor glæde Bibel App fra YouVersion og det tror jeg også at du kan få. Jeg åbner Bibelen meget mere de dage fordi det er så nemt at læse,  se, lytte og dele. Der er også læse planer tekster til hver dag.\n"
+"Hej!  \n"
 "\n"
-"Du kan få den nu (gratis!) til næsten enhver mobil enhed her:"
+"Jeg bruger Bibel App´en fra YouVersion og ønsker at dele det med dig. Hvis du er ny i forhold til Bibel app´en. Det er en enkel måde at bringe skønheden og sandheden fra Bibelen ind i hverdagen.  \n"
+"\n"
+"Få Bibel App: Læs, se, lyt og del på din smartphone eller tablet, og online på Bible.com. \n"
+" \n"
+"Opsæt din konto: abonner på Bibel Planer og få adgang til bogmærker, fremhævelser og noter på tværs af enheder. \n"
+"\n"
+"Tilføj venner (som mig!): Udforsk og diskuter Bibelen med mennesker, du holder af. \n"
+"\n"
+"Alt er i Bibel  App´en - kom i gang her:"
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p> Hej! </p><p>Jeg bruger Bibel App´en fra YouVersion og ønsker at dele det med dig. Hvis du er ny i forhold til den app, er det en enkel måde at bringe skønheden og sandheden fra Bibelen i hverdagen. </p><p> <strong> Få Bibel App: </strong> Læs, se, lyt og del på din smartphone eller tablet, og online på Bible.com </p><p> <strong> Sæt Din konto op: </strong> abonner på Bibel Planer og få adgang til bogmærker, fremhævelser og noter på tværs af enheder </p><p> <strong>  Tilføj venner (Som mig!): </strong> udforsk og diskuter Bibelen med mennesker, du holder </p><p>  det er alt sammen i Bibel App´en - kom i gang her: </p>"
 
 msgid "share.invite_twitter"
 msgstr "@YouVersion´s Bible App har en permanent ikon på min startskærm. Læs, se, lyt og dele ... alt i en gratis app: "
