--- a/config/locales/po/de/api.po
+++ b/config/locales/po/de/api.po
@@ -23,7 +23,7 @@
 # Translators:
 # Anke Stoye <ankestoyeyouversion@gmail.com>, 2013-2014
 # Brian Russell <brian.russell@youversion.com>, 2013
-# Friedrich-Wilhelm Prussak <info@prussak.de>, 2013
+# Friedrich-Wilhelm Prussak <info@prussak.de>, 2013-2014
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
 # Roman Gebath <Roman.Gebath@gmail.com>, 2013
 #, fuzzy
@@ -33,7 +33,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-23 12:16+0000\n"
+"PO-Revision-Date: 2014-07-07 13:21+0000\n"
 "Last-Translator: Anke Stoye <ankestoyeyouversion@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/projects/p/yv-backend/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -45,8 +45,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-22 18:18+0000\n"
-"Last-Translator: Friedrich-Wilhelm Prussak <info@prussak.de>\n"
+"PO-Revision-Date: 2014-06-11 08:40+0000\n"
+"Last-Translator: Anke Stoye <ankestoyeyouversion@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/projects/p/yv-backend/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -57,8 +57,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 16:51+0000\n"
-"Last-Translator: Anke Stoye <ankestoyeyouversion@gmail.com>\n"
+"PO-Revision-Date: 2014-07-11 15:01+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: German (http://www.transifex.com/projects/p/yv-backend/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -109,10 +109,10 @@ msgid "moment.plan_subscription.self.title"
 msgstr "Du hast einen Leseplan begonnen"
 
 msgid "moment.plan_segment_completion.title"
-msgstr "{name} hat Tag <b>{segment}</b> des Leseplans \"<b>{title}</b>\" abgeschlossen"
+msgstr "{name} hat Tag <b>{segment}</b> des Leseplans <b>{title}</b> abgeschlossen"
 
 msgid "moment.plan_segment_completion.self.title"
-msgstr "Du hast Tag <b>{segment}</b> des Leseplans \"<b>{title}</b>\" abgeschlossen"
+msgstr "Du hast Tag <b>{segment}</b> des Leseplans <b>{title}</b> abgeschlossen"
 
 msgid "moment.plan_segment_completion.body"
 msgstr "Tag {segment} von {total_segments} ({percent_complete}%)"
@@ -142,7 +142,7 @@ msgid "notifications.friendships.offer"
 msgstr "{name} möchte auf YouVersion mit dir befreundet sein"
 
 msgid "notifications.friendships.accept"
-msgstr "{name} hat deine Freundschaftsanfrage angenommen"
+msgstr "{name} ist jetzt mit dir befreundet"
 
 msgid "notifications.friendships.nowfriends"
 msgstr "Du bist jetzt mit {name} befreundet"
@@ -271,13 +271,23 @@ msgid "share.invite_sms"
 msgstr "Hast du die Bibel App von YouVersion? Ich mag sie sehr und denke, sie würde dir auch gefallen. Hier ist der Link:"
 
 msgid "share.invite_email_subject"
-msgstr "Hast du die Bibel App?"
+msgstr "Hast du die Bibel App schon?"
 
 msgid "share.invite_email_body"
 msgstr ""
-"Ich benutze die Bibel App von YouVersion sehr gern und dachte, sie könnte dir auch gefallen. Ich mache die Bibel oft auf, weil es so leicht ist, sie zu lesen, die Videos anzuschauen, der Hörbibel zu lauschen und sie zu teilen. Sie bietet sogar Lesepläne mit bereits ausgewählten Bibelabschnitten, die jeden Tag auf mich warten.\n"
+"Hallo! \n"
+"Ich benutze die Bibel App von YouVersion sehr gern und dachte, sie könnte dir auch gefallen. Mit der App kann man das Schöne und die Wahrheit in der Bibel in den Alltag holen.\n"
 "\n"
-"Du kannst sie (kostenlos!) für praktisch jedes mobile Gerät hier herunterladen:"
+"Lade sie dir herunter: zum Lesen, Ansehen und Zuhören. Mit ihr kann man die Bibel auch ganz leicht übers Smartphone, Tablet oder online auf Bible.com teilen. \n"
+"\n"
+"Lege dir ein kostenloses Konto an. Dann kannst du Lesepläne abonnieren und du hast Zugriff auf deine Lesezeichen, Markierungen und Notizen - auf allen Geräten.\n"
+"\n"
+"Füge Freunde hinzu (wie zum Beispiel mich!): erforsche und diskutiere mit deinen Freunden über die Bibel.\n"
+"\n"
+"All das findest du in der Bibel - hier geht's los:"
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>Hallo!</p><p>Ich benutze die Bibel App von YouVersion und möchte sie mit dir teilen. Bist du noch nicht mit der App vertraut? Sie ist ein einfacher Weg, die Schönheit und Wahrheit der Bibel in dein tägliches Leben zu holen. </p><p><strong>Lade dir die Bibel App herunter:</strong> lies sie, schaue dir Videos an, genieße die Hörbibel und teile Verse usw. mit deinem Smartphone, Tablet oder online auf Bible.com.</p><p><strong>Richte dir ein Konto ein:</strong> Abonniere Bibellesepläne und greife auf Lesezeichen, Markierungen und Notizen geräteübergreifend zu.</p><p><strong>Füge Freunde hinzu (wie z. B. mich!):</strong> Erforsche und diskutiere die Bibel mit Personen, die dir wichtig sind.</p><p>Dies alles gibt es in der Bibel App. Hier geht's los: </p>"
 
 msgid "share.invite_twitter"
 msgstr "Die Bibel @YouVersion ist auf meinem Start-Bildschirm. Lesen, ansehen, anhören und teilen ... all das in einer kostenlosen App:"
