--- a/config/locales/po/en/api.po
+++ b/config/locales/po/en/api.po
@@ -48,8 +48,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2013-04-30 16:35+0000\n"
-"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
+"PO-Revision-Date: 2014-06-20 14:52-0600\n"
+"Last-Translator: Tommy George <tommy.george@lifechurch.tv>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -262,13 +262,24 @@ msgid "share.invite_sms"
 msgstr "Do you have the Bible App from YouVersion? I love it, and I think you would too. Here's the link:"
 
 msgid "share.invite_email_subject"
-msgstr "Do you have the Bible App?"
+msgstr "Join me on the Bible App!"
 
 msgid "share.invite_email_body"
 msgstr ""
-"I've been enjoying the Bible App from YouVersion and thought you might like it too. I'm opening the Bible a lot more these days because it's so easy to read, watch, listen, and share. It even has Plans, which have a selection of the Bible all picked out and waiting for me every day.\n"
+"Hello!\n"
 "\n"
-"You can get it (free!) for pretty much any mobile device here:"
+"I'm using the Bible App from YouVersion and wanted to share it with you. If you're new to the app, it's a simple way to bring the beauty and truth of the Bible into everyday life.\n"
+"\n"
+"Get the Bible App: read, watch, listen, and share on your smartphone or tablet, and online at Bible.com.\n"
+"\n"
+"Set up your account: subscribe to Bible Plans and access bookmarks, highlights, and notes across devices.\n"
+"\n"
+"Add friends (like me!): explore and discuss the Bible with people you care about.\n"
+"\n"
+"It's all in the Bible App—get started here: "
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>Hi!</p><p>I'm using the Bible App from YouVersion and wanted to share it with you. If you're new to the app, it's a simple way to bring the beauty and truth of the Bible into everyday life. </p><p><strong>Get the Bible App:</strong> read, watch, listen, and share on your smartphone or tablet, and online at Bible.com</p><p><strong>Set up Your Account:</strong> subscribe to Bible Plans and access bookmarks, highlights, and notes across devices</p><p><strong>Add Friends (Like Me!):</strong> explore and discuss the Bible with people you care about</p><p>It's all in the Bible App—get started here: </p>"
 
 msgid "share.invite_twitter"
 msgstr "The @YouVersion Bible App has a permanent spot on my home screen. Read, watch, listen, and share…all in a free app:"
