--- a/config/locales/po/en_GB/api.po
+++ b/config/locales/po/en_GB/api.po
@@ -5,21 +5,21 @@
 # Translators:
 # Translators:
 # Anke Stoye <ankestoyeyouversion@gmail.com>, 2014
-# Susan <susan.howe84@gmail.com>, 2013-2014
+# Susan Howe <susan.howe84@gmail.com>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
 # Translators:
 # Translators:
 # Translators:
-# Susan <susan.howe84@gmail.com>, 2013-2014
+# Susan Howe <susan.howe84@gmail.com>, 2013-2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
 #
 # Translators:
 # Translators:
-# Susan <susan.howe84@gmail.com>, 2013-2014
-# Susan <susan.howe84@gmail.com>, 2013
+# Susan Howe <susan.howe84@gmail.com>, 2013-2014
+# Susan Howe <susan.howe84@gmail.com>, 2013
 #, fuzzy
 msgid ""
 msgstr ""
@@ -28,7 +28,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
 "PO-Revision-Date: 2014-05-23 03:03+0000\n"
-"Last-Translator: Susan <susan.howe84@gmail.com>\n"
+"Last-Translator: Susan Howe <susan.howe84@gmail.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/projects/p/yv-backend/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,7 +40,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
 "PO-Revision-Date: 2014-05-20 19:22+0000\n"
-"Last-Translator: Susan <susan.howe84@gmail.com>\n"
+"Last-Translator: Susan Howe <susan.howe84@gmail.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/projects/p/yv-backend/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -51,8 +51,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-28 10:40+0000\n"
-"Last-Translator: Susan <susan.howe84@gmail.com>\n"
+"PO-Revision-Date: 2014-07-11 15:01+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/projects/p/yv-backend/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -265,13 +265,24 @@ msgid "share.invite_sms"
 msgstr "Do you have the Bible App from YouVersion? I love it, and I think you would too. Here's the link:"
 
 msgid "share.invite_email_subject"
-msgstr "Do you have the Bible App?"
+msgstr "Join me on the Bible App!"
 
 msgid "share.invite_email_body"
 msgstr ""
-"I've been enjoying the Bible App from YouVersion and thought you might like it too. I'm opening the Bible a lot more these days because it's so easy to read, watch, listen, and share. It even has plans, which have a selection of the Bible all picked out and waiting for me every day.\n"
+"Hello!\n"
 "\n"
-"You can get it (free!) for pretty much any mobile device here:"
+"I'm using the Bible App from YouVersion and wanted to share it with you. If you're new to the app, it's a simple way to bring the beauty and truth of the Bible into everyday life.\n"
+"\n"
+"Get the Bible App: read, watch, listen, and share on your smartphone or tablet, and online at Bible.com.\n"
+"\n"
+"Set up your account: subscribe to Bible plans and access bookmarks, highlights, and notes across devices.\n"
+"\n"
+"Add friends (like me!): explore and discuss the Bible with people you care about.\n"
+"\n"
+"It's all in the Bible App—get started here: "
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>Hi!</p><p>I'm using the Bible App from YouVersion and wanted to share it with you. If you're new to the app, it's a simple way to bring the beauty and truth of the Bible into everyday life. </p><p><strong>Get the Bible App:</strong> read, watch, listen, and share on your smartphone or tablet, and online at Bible.com</p><p><strong>Set up your account:</strong> subscribe to Bible plans and access bookmarks, highlights, and notes across devices</p><p><strong>Add friends (Like me!):</strong> explore and discuss the Bible with people you care about</p><p>It's all in the Bible App—get started here: </p>"
 
 msgid "share.invite_twitter"
 msgstr "The @YouVersion Bible App has a permanent spot on my home screen. Read, watch, listen, and share…all in a free app:"
