--- a/config/locales/po/es/api.po
+++ b/config/locales/po/es/api.po
@@ -4,21 +4,22 @@
 # Translators:
 # Translators:
 # Translators:
-# myleju, 2014
+# Alejandra Juárez, 2014
 # Carlos Orjuela <carlos.orjuelaz@gmail.com>, 2014
-# FedericoLarriva <federicolarriva@hotmail.com>, 2013-2014
-# JessicaO <jessi1205@gmail.com>, 2013
-# samararios19 <sammyl12@hotmail.com>, 2014
+# Federico Larriva <federicolarriva@hotmail.com>, 2013-2014
+# Jessica Olivares <jessi1205@gmail.com>, 2013
+# Samara Rios <sammyl12@hotmail.com>, 2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
 # Translators:
 # Translators:
 # Translators:
+# Alejandra Juárez, 2014
 # Carlos Orjuela <carlos.orjuelaz@gmail.com>, 2014
-# Claudio Lefimil <usalefimil@gmail.com>, 2014
-# dvillegas <deixii@gmail.com>, 2013
-# FedericoLarriva <federicolarriva@hotmail.com>, 2013-2014
+# Claudio A. Lefimil <usalefimil@gmail.com>, 2014
+# Dayse Villegas <deixii@gmail.com>, 2013
+# Federico Larriva <federicolarriva@hotmail.com>, 2013-2014
 # Hector Escobar <yevgueni21@gmail.com>, 2014
 # marthakinney <marthakinney@windstream.net>, 2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
@@ -26,9 +27,13 @@
 #
 # Translators:
 # Translators:
-# FedericoLarriva <federicolarriva@hotmail.com>, 2013-2014
-# FedericoLarriva <federicolarriva@hotmail.com>, 2013
+# Alejandra Juárez, 2014
+# Alejandra Juárez, 2014
+# Federico Larriva <federicolarriva@hotmail.com>, 2013-2014
+# Federico Larriva <federicolarriva@hotmail.com>, 2013
 # Jose Hernandez <youversion@josehernandez.tv>, 2013
+# marthakinney <marthakinney@windstream.net>, 2014
+# marthakinney <marthakinney@windstream.net>, 2014
 #, fuzzy
 msgid ""
 msgstr ""
@@ -37,7 +42,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
 "PO-Revision-Date: 2014-05-21 14:22+0000\n"
-"Last-Translator: samararios19 <sammyl12@hotmail.com>\n"
+"Last-Translator: Samara Rios <sammyl12@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/yv-backend/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -48,8 +53,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-27 22:01+0000\n"
-"Last-Translator: FedericoLarriva <federicolarriva@hotmail.com>\n"
+"PO-Revision-Date: 2014-06-21 18:53+0000\n"
+"Last-Translator: marthakinney <marthakinney@windstream.net>\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/yv-backend/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -60,8 +65,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-05 19:02+0000\n"
-"Last-Translator: FedericoLarriva <federicolarriva@hotmail.com>\n"
+"PO-Revision-Date: 2014-07-11 16:45+0000\n"
+"Last-Translator: Federico Larriva <federicolarriva@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/yv-backend/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -160,10 +165,10 @@ msgid "notifications.comments.moment.mine.highlight"
 msgstr "{name} comentó en su resaltado: \"{comment}\""
 
 msgid "notifications.comments.moment.mine.plan_activity"
-msgstr "{name} comentarios sobre su Plan: “{comment}”"
+msgstr "{name} comentó sobre su Plan: “{comment}”"
 
 msgid "notifications.comments.moment.mine.plan_activity.push"
-msgstr "{name} comentó sobre su Plan Biblia: “{comment}”"
+msgstr "{name} comentó sobre su Plan Bíblico: “{comment}”"
 
 msgid "notifications.comments.moment.mine.friendship"
 msgstr "{name} comentó sobre su nueva amistad con {friend_name}: “{comment}”"
@@ -172,28 +177,28 @@ msgid "notifications.comments.moment.mine.note"
 msgstr "{name} comentó en su nota: \"{comment}\""
 
 msgid "notifications.likes.moment.mine.bookmark"
-msgstr "{name} Les gusta su marcador, {reference_human}"
+msgstr "A {name} le gusta su marcador, {reference_human}"
 
 msgid "notifications.likes.moment.mine.highlight"
-msgstr "{name} Les gusta su resaltado, {reference_human}"
+msgstr "A {name} le gusta su resaltado, {reference_human}"
 
 msgid "notifications.likes.moment.mine.plan_activity"
-msgstr "A {name} le agrada la actividad de tu Plan"
+msgstr "A {name} le gusta la actividad de su Plan"
 
 msgid "notifications.likes.moment.mine.plan_activity.push"
-msgstr "a {name} le gusta la actividad de tu Plan Biblia"
+msgstr "A {name} le gusta la actividad de su Plan de Lectura"
 
 msgid "notifications.likes.moment.mine.friendship"
 msgstr "A {name} le gusta su nueva amistad con {friend_name}"
 
 msgid "notifications.likes.moment.mine.note.reference"
-msgstr "{name} Les gusta su nota en, {reference_human}"
+msgstr "A {name} le gusta su nota en {reference_human}"
 
 msgid "notifications.likes.moment.mine.note.title"
-msgstr "{name} Les gusta su nota, “{title}”"
+msgstr "A {name} le gusta su nota, “{title}”"
 
 msgid "notifications.likes.moment.mine.note.no_title_no_reference"
-msgstr "{name} Les gusta su nota"
+msgstr "A {name} le gusta su nota"
 
 msgid "notifications.comments.moments.friend.owner.bookmark"
 msgstr "{moment_owner_name} también comentó en su marcador: \"{comment}\""
@@ -217,13 +222,13 @@ msgid "notifications.comments.moments.friend.owner.plan_activity"
 msgstr "{moment_owner_name} también comentó sobre su Plan: “{comment}”"
 
 msgid "notifications.comments.moments.friend.plan_activity"
-msgstr "{commenter_name} también comentó sobre {moment_owner_name}Plan: “{comment}”"
+msgstr "{commenter_name} también comentó sobre el Plan de {moment_owner_name}: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.plan_activity.push"
 msgstr "{moment_owner_name} también comentó sobre su Plan Biblia: “{comment}”"
 
 msgid "notifications.comments.moments.friend.plan_activity.push"
-msgstr "{commenter_name} también comentó en el Plan Bíblico de {moment_owner_name}: “{comment}”"
+msgstr "{commenter_name} también comentó en el Plan de Lectura de {moment_owner_name}: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.note"
 msgstr "{moment_owner_name} también comentó en su nota: \"{comment}\""
@@ -278,9 +283,20 @@ msgstr "¿Tiene la Biblia App?"
 
 msgid "share.invite_email_body"
 msgstr ""
-"He estado disfrutando de la Biblia App de YouVersion y pensé que le podría gustar también.  He estado leyendo más la Biblia últimamente porque es fácil de leer, ver, escuchar y compartir. Incluso tiene Planes de Lectura, los cuales tienen una selección de la Biblia exclusivamente elegida esperándome cada día.\n"
+"¡Hola!\n"
 "\n"
-"Puede descargarla (¡totalmente gratis!) a casi cualquier dispositivo móvil aquí:"
+"Estoy usando la Biblia App de YouVersion y quiero compartirla con usted. Si es nuevo en la aplicación, es una forma simple de traer la belleza y la verdad de la Biblia a nuestra vida diaria.\n"
+"\n"
+"Obtenga la Biblia App: lea, vea, escuche y compártala en su smartphone o tablet y en línea en Bible.com/es.\n"
+"\n"
+"Configure su cuenta: susbribase a los Planes de Lectura y accesse a los marcadores, resaltados y notas a través de los dispositivos.\n"
+"\n"
+"Agregue a amigos (¡como a mí!): explore y duscuta la Biblia con personas importantes para usted.\n"
+"\n"
+"Todo está en la Biblia App—inicie aquí:"
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>Hola!</p><p>Estoy usando la Biblia App de YouVersion y quiero compartirla con usted. Si es nuevo en la aplicación, es una forma simple de traer la belleza y la verdad de la Biblia a nuestra vida diaria.  </p><p><strong>Obtenga la Biblia App:</strong> lea, vea, escuche y compártala en su smartphone o tablet y en línea en Bible.com</p><p><strong> Configure su Cuenta:</strong> Suscríbase a los Planes de Lectura y accesse a los marcadores, resaltados y notas a través de los dispositivos </p><p><strong>Agregue Amigos (¡dé me gusta!):</strong> explore y duscuta la Biblia con personas importantes para usted </p><p> Todo esta en la Biblia App—inicie aquí: </p>"
 
 msgid "share.invite_twitter"
 msgstr "La Biblia App de @YouVersion tiene un lugar permanente en mi pantalla principal.  Lea, vea, escuche y comparta…todo en un App gratuita:"
