--- a/config/locales/po/es_ES/api.po
+++ b/config/locales/po/es_ES/api.po
@@ -4,26 +4,26 @@
 # Translators:
 # Translators:
 # Translators:
-# ordaks <manuelordax@me.com>, 2013-2014
+# manuel ordax <manuelordax@me.com>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
 # Translators:
 # Translators:
 # Translators:
-# DavidEsteve <david.drummer.93@gmail.com>, 2013
-# MatthewHernandes <mateohernandez@hotmail.com>, 2013
-# ordaks <manuelordax@me.com>, 2013-2014
+# David Esteve Navarro <david.drummer.93@gmail.com>, 2013
+# Ferran Mateo Hernandez <mateohernandez@hotmail.com>, 2013
+# manuel ordax <manuelordax@me.com>, 2013-2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
 #
 # Translators:
 # Translators:
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
-# ordaks <manuelordax@me.com>, 2013
-# meralemar <meralemar@gmail.com>, 2013
-# meralemar <meralemar@gmail.com>, 2013
-# ordaks <manuelordax@me.com>, 2013
+# manuel ordax <manuelordax@me.com>, 2013-2014
+# Mercedes Aleixandre <meralemar@gmail.com>, 2013
+# Mercedes Aleixandre <meralemar@gmail.com>, 2013-2014
+# manuel ordax <manuelordax@me.com>, 2013
 #, fuzzy
 msgid ""
 msgstr ""
@@ -31,8 +31,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-20 18:23+0000\n"
-"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
+"PO-Revision-Date: 2014-06-12 12:40+0000\n"
+"Last-Translator: manuel ordax <manuelordax@me.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/yv-backend/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -43,8 +43,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-20 19:52+0000\n"
-"Last-Translator: ordaks <manuelordax@me.com>\n"
+"PO-Revision-Date: 2014-06-12 12:40+0000\n"
+"Last-Translator: manuel ordax <manuelordax@me.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/yv-backend/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -55,8 +55,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-06 13:53+0000\n"
-"Last-Translator: DavidEsteve <david.drummer.93@gmail.com>\n"
+"PO-Revision-Date: 2014-07-11 15:01+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/yv-backend/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -119,7 +119,7 @@ msgid "moment.plan_completion.title"
 msgstr "{name} completó un plan de lectura"
 
 msgid "moment.plan_completion.self.title"
-msgstr "Completó un plan de lectura"
+msgstr "Has completado tu plan de lectura"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} ganó una insignia <b>{title}</b>"
@@ -173,7 +173,7 @@ msgid "notifications.likes.moment.mine.highlight"
 msgstr "{name} le gusta tu destacado, {reference_human}"
 
 msgid "notifications.likes.moment.mine.plan_activity"
-msgstr "{name} le gusta la actividad de tu plan de lectura"
+msgstr "{name} le gusta tu actividad del plan de lectura"
 
 msgid "notifications.likes.moment.mine.plan_activity.push"
 msgstr "{name} le gusta la actividad de tu plan de lectura bíblica"
@@ -276,6 +276,9 @@ msgstr ""
 "Estoy disfrutando con la Biblia App de YouVersion y pienso que también te gustará. Abro la Biblia mucho más ultimamente porque es muy fácil de leer, visualizar, escuchar y compartir. Incluso tiene Planes de lectura, y una selección de la Biblia lista esperándome cada día.\n"
 "\n"
 "Puedes obtenerla (gratis) para cualquier dispositivo móvil aquí:"
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>¡Hola!!</p><p>Estoy usando la Biblia App de YouVersion y quiero compartila contigo. Si eres nuevo con la app, ésta es un forma sencilla de acercar la belleza y la verdad de la Biblia a tu vida cotidiana. </p><p><strong>Consigue la Biblia App:</strong> lee, observa, escucha, y comparte online en tu móvil o tableta en Biblia.com</p><p><strong>Configura tu cuenta:</strong> suscríbete a los planes de lectura bíblica y accede a marcadores, destacados y notas en diferentes dispositivos</p><p><strong>Añade amigos (¡Me gusta!):</strong> explora y comenta sobre la Biblia con la gente que te importa</p><p>Todo en la Biblia App, comienza aquí: </p>"
 
 msgid "share.invite_twitter"
 msgstr "La Biblia App de @YouVersion tiene un lugar destacado en mi pantalla principal. Leer, observar, escuchar y compartir... todo en una app gratuita:"
