--- a/config/locales/po/fi/api.po
+++ b/config/locales/po/fi/api.po
@@ -5,7 +5,7 @@
 # Translators:
 # Translators:
 # Juho Autio <autiojuho@gmail.com>, 2013-2014
-# TimoPennila <timo.pennila@gmail.com>, 2013-2014
+# Timo Pennilä <timo.pennila@gmail.com>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
@@ -13,13 +13,14 @@
 # Translators:
 # Translators:
 # Juho Autio <autiojuho@gmail.com>, 2013-2014
-# TimoPennila <timo.pennila@gmail.com>, 2013-2014
+# Timo Pennilä <timo.pennila@gmail.com>, 2013-2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
 #
 # Translators:
 # Translators:
-# Juho Autio <autiojuho@gmail.com>, 2013
+# Juho Autio <autiojuho@gmail.com>, 2013-2014
+# Timo Pennilä <timo.pennila@gmail.com>, 2014
 #, fuzzy
 msgid ""
 msgstr ""
@@ -51,8 +52,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 18:26+0000\n"
-"Last-Translator: TimoPennila <timo.pennila@gmail.com>\n"
+"PO-Revision-Date: 2014-07-11 15:01+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Finnish (http://www.transifex.com/projects/p/yv-backend/language/fi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -272,6 +273,9 @@ msgstr ""
 "Olen iloinnut YouVersionin Raamattusovelluksesta ja ajattelin, että sinäkin voisit pitää siitä. Avaan Raamatun nykyään paljon useammin, koska sitä on niin helppo lukea, katsoa, kuunnella ja jakaa. Siinä on jopa lukusuunnitelmat: joka päivä valikoidut raamatunkohdat odottavat minua.\n"
 "\n"
 "Saat sen (ilmaiseksi!) hyvin pitkälti mille tahansa mobiililaitteelle täältä:"
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>Hei!</p><p>Käytän YouVersionin Raamattusovellusta ja halusin jakaa sen kanssasi. Jos et ole vielä tutustunut sovellukseen, se on helppo tapa tuoda Raamatun totuudet jokapäiväiseen elämääsi. </p><p><strong>Ota Raamattusovellus käyttöösi:</strong> lue, katsele, kuuntele ja jaa älypuhelimella tai tabletilla sekä netissä: Bible.com</p><p><strong>Luo tili:</strong> aloita raamattusuunnitelmia ja lisää kirjanmerkkejä, korostuksia sekä muistiinpanoja eri laitteilla</p><p><strong>Lisää ystäviä (kuten minä!):</strong> tutki ja keskustele Raamatusta sinulle tärkeiden ihmisten kanssa</p><p>Tämä kaikki on saatavilla Raamattusovelluksen kautta — pääset alkuun täällä: </p>"
 
 msgid "share.invite_twitter"
 msgstr "@YouVersion:in Raamattusovellus on pysyvästi kotivalikossani. Lue, katso, kuuntele ja jaa... ilmaisessa sovelluksessa:"
