--- a/config/locales/po/fr/api.po
+++ b/config/locales/po/fr/api.po
@@ -4,11 +4,11 @@
 # Translators:
 # Translators:
 # Translators:
-# spica <david.e.blanc@gmail.com>, 2014
-# spica <david.e.blanc@gmail.com>, 2013
+# David Blanc <david.e.blanc@gmail.com>, 2014
+# David Blanc <david.e.blanc@gmail.com>, 2013
 # francois delp <francoisdelp@gmail.com>, 2013
-# KONANDELPHIN <ankondelph@yahoo.fr>, 2013
-# coralieketty94 <coraliekouame@rocketmail.com>, 2013
+# KONAN Y. Delphin <ankondelph@yahoo.fr>, 2013
+# KOUAME MARIE ANGE CORALIE KETTY <coraliekouame@rocketmail.com>, 2013
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
@@ -16,22 +16,22 @@
 # Translators:
 # Translators:
 # Anke Stoye <ankestoyeyouversion@gmail.com>, 2014
-# spica <david.e.blanc@gmail.com>, 2014
+# David Blanc <david.e.blanc@gmail.com>, 2014
 # francois delp <francoisdelp@gmail.com>, 2013-2014
-# KONANDELPHIN <ankondelph@yahoo.fr>, 2013
+# KONAN Y. Delphin <ankondelph@yahoo.fr>, 2013
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
 #
 # Translators:
 # Translators:
 # Anke Stoye <ankestoyeyouversion@gmail.com>, 2013
-# Axers Consulting <rameaubaby@gmail.com>, 2013
-# spica <david.e.blanc@gmail.com>, 2014
-# spica <david.e.blanc@gmail.com>, 2013
+# Ramelle Sasso <rameaubaby@gmail.com>, 2013
+# David Blanc <david.e.blanc@gmail.com>, 2013-2014
+# David Blanc <david.e.blanc@gmail.com>, 2013
 # francois delp <francoisdelp@gmail.com>, 2013
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
-# Axers Consulting <rameaubaby@gmail.com>, 2013
-# spica <david.e.blanc@gmail.com>, 2013
+# Ramelle Sasso <rameaubaby@gmail.com>, 2013
+# David Blanc <david.e.blanc@gmail.com>, 2013
 #, fuzzy
 msgid ""
 msgstr ""
@@ -40,7 +40,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
 "PO-Revision-Date: 2014-05-22 08:18+0000\n"
-"Last-Translator: spica <david.e.blanc@gmail.com>\n"
+"Last-Translator: David Blanc <david.e.blanc@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/yv-backend/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -52,7 +52,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
 "PO-Revision-Date: 2014-05-23 00:34+0000\n"
-"Last-Translator: spica <david.e.blanc@gmail.com>\n"
+"Last-Translator: David Blanc <david.e.blanc@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/yv-backend/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -63,8 +63,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-03 09:10+0000\n"
-"Last-Translator: spica <david.e.blanc@gmail.com>\n"
+"PO-Revision-Date: 2014-07-11 15:32+0000\n"
+"Last-Translator: David Blanc <david.e.blanc@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/yv-backend/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -277,13 +277,24 @@ msgid "share.invite_sms"
 msgstr "Est-ce que tu as la Bible App de YouVersion ? J'en suis fan et je suis sûr qu'elle te plairait aussi. Voici le lien :"
 
 msgid "share.invite_email_subject"
-msgstr "Est-ce que tu as la Bible App ?"
+msgstr "Rejoins-moi sur la Bible App !"
 
 msgid "share.invite_email_body"
 msgstr ""
-"J'apprécie énormément la Bible App de YouVersion et j'ai pensé qu'elle te plairait aussi. J'ouvre beaucoup plus la Bible ces derniers temps vu la facilité avec laquelle je peux lire, regarder, écouter et partager. Elle a même des Plans de lecture qui proposent une sélection de lectures bibliques qui m'attendent chaque jour.\n"
+"Bonjour !\n"
 "\n"
-"Tu peux l'avoir (gratuitement) pratiquement sur tout type de mobile ici :"
+"J'utilise la Bible App de YouVersion et je voulais te la faire découvrir. Si tu ne la connais pas,  c'est une façon simple d'inclure la beauté et la vérité de la Bible dans la vie de tous les jours.\n"
+"\n"
+"Récupère la Bible App : lis, regarde, écoute et partage sur ton smartphone et ta tablette ou en ligne sur Bible.com.\n"
+"\n"
+"Crée un compte : souscrit à des Plans de lecture et accède à tes favoris, notes ou surbrillances sur différents appareils.\n"
+"\n"
+"Ajoute des Amis (comme moi !) : explore la Bible et parles-en avec des gens qui comptent\n"
+"\n"
+"c'est tout dans la Bible App — et tu peux démarrer ici : "
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>Bonjour !</p><p>J'utilise la Bible App de YouVersion et je voulais te la faire découvrir. Si tu ne la connais pas,  c'est une façon simple d'inclure la beauté et la vérité de la Bible dans la vie de tous les jours. </p><p><strong>Récupère la Bible App :</strong> lis, regarde, écoute et partage sur ton smartphone et ta tablette ou en ligne sur Bible.com</p><p><strong>Crée un compte :</strong> souscris à des Plans de lecture et accède à tes favoris, notes ou surbrillances sur différents appareils</p><p><strong>Ajoute des Amis (comme moi !) :</strong> explore la Bible et parles-en avec des gens qui comptent</p><p>c'est tout dans la Bible App — et tu peux démarrer ici : </p>"
 
 msgid "share.invite_twitter"
 msgstr "La Bible App de @YouVersion a un raccourci permanent sur ma page d'accueil. Lire, regarder, écouter et partager... le tout dans une app gratuite :"
