--- a/config/locales/po/hu/api.po
+++ b/config/locales/po/hu/api.po
@@ -5,9 +5,10 @@
 # Translators:
 # Translators:
 # Anke Stoye <ankestoyeyouversion@gmail.com>, 2014
-# Csaba Sóti, 2014
-# Gabi Veres <vegbor1@gmail.com>, 2014
-# IlonaKoncz <konczica@gmail.com>, 2013-2014
+# Csaba, 2014
+# Gábor Veres <vegbor1@gmail.com>, 2014
+# Ilona Koncz <konczica@gmail.com>, 2013-2014
+# Lohn Szabolcs <lohnszabolcs+transifex@gmail.com>, 2014
 # mississippi44 <petrik.hermina@gmail.com>, 2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
@@ -16,9 +17,9 @@
 # Translators:
 # Translators:
 # Anke Stoye <ankestoyeyouversion@gmail.com>, 2014
-# Csaba Sóti, 2014
-# IlonaKoncz <konczica@gmail.com>, 2014
-# lohnszabolcs <lohnszabolcs+transifex@gmail.com>, 2013-2014
+# Csaba, 2014
+# Ilona Koncz <konczica@gmail.com>, 2014
+# Lohn Szabolcs <lohnszabolcs+transifex@gmail.com>, 2013-2014
 # mississippi44 <petrik.hermina@gmail.com>, 2013
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
@@ -27,10 +28,11 @@
 # Translators:
 # chrisvaughn <chris.vaughn@lifechurch.tv>, 2014
 # chrisvaughn <chris.vaughn@lifechurch.tv>, 2014
-# g.janosh <gajdoshj@gmail.com>, 2013
-# g.janosh <gajdoshj@gmail.com>, 2013
-# zsonglorman <zsonglorman@gmail.com>, 2013
-# zsonglorman <zsonglorman@gmail.com>, 2013
+# Gajdos Janos <gajdoshj@gmail.com>, 2013
+# Gajdos Janos <gajdoshj@gmail.com>, 2013
+# Ilona Koncz <konczica@gmail.com>, 2014
+# Péter Király <zsonglorman@gmail.com>, 2013
+# Péter Király <zsonglorman@gmail.com>, 2013
 #, fuzzy
 msgid ""
 msgstr ""
@@ -38,8 +40,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-16 13:20+0000\n"
-"Last-Translator: Gabi Veres <vegbor1@gmail.com>\n"
+"PO-Revision-Date: 2014-06-17 12:40+0000\n"
+"Last-Translator: Ilona Koncz <konczica@gmail.com>\n"
 "Language-Team: Hungarian (http://www.transifex.com/projects/p/yv-backend/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -50,8 +52,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-21 07:22+0000\n"
-"Last-Translator: Csaba Sóti\n"
+"PO-Revision-Date: 2014-06-17 12:29+0000\n"
+"Last-Translator: Ilona Koncz <konczica@gmail.com>\n"
 "Language-Team: Hungarian (http://www.transifex.com/projects/p/yv-backend/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -62,8 +64,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-16 13:17+0000\n"
-"Last-Translator: Gabi Veres <vegbor1@gmail.com>\n"
+"PO-Revision-Date: 2014-07-11 15:01+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Hungarian (http://www.transifex.com/projects/p/yv-backend/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -108,10 +110,10 @@ msgid "moment.bible.download.self.title"
 msgstr "Letöltötted a <b>{version}</b> verziót"
 
 msgid "moment.plan_subscription.title"
-msgstr "{name} elkezdett egy tervet"
+msgstr "{name} elkezdett egy új tervet"
 
 msgid "moment.plan_subscription.self.title"
-msgstr "Terv elkezdve"
+msgstr "Elkezdtél egy új tervet"
 
 msgid "moment.plan_segment_completion.title"
 msgstr "{name} befejezte a <b>{segment}</b> napot a <b>{title}</b> tervből"
@@ -123,10 +125,10 @@ msgid "moment.plan_segment_completion.body"
 msgstr "{segment}. nap a {total_segments}-ból/-ből ({percent_complete}%)"
 
 msgid "moment.plan_completion.title"
-msgstr "{name} teljesítette a tervet"
+msgstr "{name} befejezte a tervet"
 
 msgid "moment.plan_completion.self.title"
-msgstr "Teljesített egy tervet"
+msgstr "Befejeztél egy tervet"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} megszerezte <b>{title}</b> jelvényt"
@@ -139,6 +141,9 @@ msgstr "{name} megnézte <b>{title}</b>"
 
 msgid "moment.video.watched.self.title"
 msgstr "Megnézted a <b>{title}</b>"
+
+msgid "moment.system.find_friends.title"
+msgstr "Barátokkal a Biblia alkalmazás is jobb. Keress barátokat a címjegyzékben."
 
 msgid "notifications.friendships.offer"
 msgstr "{name} szeretne a barátod lenni a YouVersionön"
@@ -273,14 +278,21 @@ msgid "share.invite_sms"
 msgstr "Letöltötted már a YouVersion Bibla alkalmazását? Nekem nagyon teszik, szerintem neked is tetszene. Itt van a letöltő link:"
 
 msgid "share.invite_email_subject"
-msgstr "Van már Biblia alkalmazásod?"
+msgstr "Használd te is a Biblia alkalmazást!"
 
 msgid "share.invite_email_body"
 msgstr ""
-"Én nagyon szeretem a  YouVersion Biblia alkalmazását és szerintem neked is tetszene. Mostanában sokkal többször nyitom ki a Bibliát, mert így nagyon könnyű olvasni, nézni, vagy akár hallgatni és megosztani. Olvasási terveket is tartalmaz, amelyeket a Bibliából választottak ki, és mindennap rám várnak.\n"
+"Én nagyon szeretem a  YouVersion Biblia alkalmazását és szerintem neked is tetszene. Ha mostanában kezdted el használni az alkalmazást, ez nagyon egyszerűen behozza a minden napi életedbe a Biblia szépségét és igazságát.\n"
 "\n"
-"Itt szerezheted meg (ingyen!) szinte bármilyen mobil eszközre:\n"
-"http://www.bible.com/app"
+"Töltsd le a Biblia alkalmazást: olvass, nézz, hallgass és ossz meg az okos-telefonodon, a tableteden és online a Bible.com-on keresztül.\n"
+"\n"
+"Nyiss magadnak egy fiókot: iratkozz fel a Bibliai tervekre és hozzáférhetsz a könyvjelzőkhöz, kiemelésekhez és jegyzetekhez az eszközeiden.\n"
+"\n"
+"Adj hozzá barátokat (lájkolj!): fedezd fel és beszélgess a Bibliáról azokkal, akik fontosak számodra.\n"
+"Mindezt megtalálod a Biblia alkalmazásban - kezdd el most:"
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>Sziai!</p><p>Szeretném, ha tudnád, hogy a YouVersion Biblia alkalmazást használom. Ha ez az alkalmazás új számodra, ez egyszerűen elhozza a minden napjaiba a Biblia szépségét és igazságát. </p><p><strong>Töltsd le a Biblia alkalmazást:</strong> Olvass, nézz, hallgass és ossz meg az okos telefonodon, tableteden és online a Bible. com-on keresztül</p><p><strong>Nyiss egy fiókot:</strong> iratkozz és hozzáférhetsz a könyvjelzőkhöz, kiemelésekhez és jegyzetekhez az eszközeiden</p><p><strong>Adj hozzá barátokat (lájolj!):</strong> fedezd fel és beszélgess a Bibliáról azokkal, akik fontosak számodra</p><p>Mindezt megtalálod a Biblia alkalmazásban—indulj el itt: </p>"
 
 msgid "share.invite_twitter"
 msgstr "A YouVersion Biblia alkalmazásának állandó helye van a kezdőképernyőmön. Olvass, nézz, hallgass és ossz meg...mindezt egy ingyenes alkalmazással:"
