--- a/config/locales/po/id/api.po
+++ b/config/locales/po/id/api.po
@@ -5,10 +5,10 @@
 # Translators:
 # Translators:
 # galonz <giandre.wijaya@gmail.com>, 2013
-# indhisa <indhisa@gmail.com>, 2014
+# Indira D. Saraswaty <indhisa@gmail.com>, 2014
 # IvanaHartanto <ivana_hartanto@hotmail.com>, 2014
-# mei14, 2014
-# Ouli <origena@gmail.com>, 2014
+# Mei Fujita, 2014
+# Ori Ouli <origena@gmail.com>, 2014
 # renegade <xrenegadex@hotmail.co.jp>, 2013
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
@@ -17,18 +17,22 @@
 # Translators:
 # Translators:
 # galonz <giandre.wijaya@gmail.com>, 2013
-# gtkom <hendri.nurhalim@gmail.com>, 2014
-# mei14, 2014
+# Hendri N <hendri.nurhalim@gmail.com>, 2014
+# Marg Situ <margyouversion@gmail.com>, 2014
+# Mei Fujita, 2014
 # renegade <xrenegadex@hotmail.co.jp>, 2013
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
 #
 # Translators:
 # Translators:
+# IvanaHartanto <ivana_hartanto@hotmail.com>, 2014
+# IvanaHartanto <ivana_hartanto@hotmail.com>, 2014
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
-# margyouversion <margyouversion@gmail.com>, 2013-2014
-# margyouversion <margyouversion@gmail.com>, 2013
-# mei14, 2014
+# Marg Situ <margyouversion@gmail.com>, 2013-2014
+# Marg Situ <margyouversion@gmail.com>, 2013
+# Mei Fujita, 2014
+# Mei Fujita, 2014
 # renegade <xrenegadex@hotmail.co.jp>, 2013
 # renegade <xrenegadex@hotmail.co.jp>, 2013
 #, fuzzy
@@ -39,7 +43,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
 "PO-Revision-Date: 2014-05-24 07:51+0000\n"
-"Last-Translator: mei14\n"
+"Last-Translator: Mei Fujita\n"
 "Language-Team: Indonesian (http://www.transifex.com/projects/p/yv-backend/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -50,8 +54,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-23 00:12+0000\n"
-"Last-Translator: mei14\n"
+"PO-Revision-Date: 2014-06-17 01:50+0000\n"
+"Last-Translator: Mei Fujita\n"
 "Language-Team: Indonesian (http://www.transifex.com/projects/p/yv-backend/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -62,8 +66,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-24 08:52+0000\n"
-"Last-Translator: mei14\n"
+"PO-Revision-Date: 2014-07-11 15:01+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Indonesian (http://www.transifex.com/projects/p/yv-backend/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -147,7 +151,7 @@ msgid "notifications.friendships.offer"
 msgstr "{name} ingin berteman dengan Anda di YouVersion"
 
 msgid "notifications.friendships.accept"
-msgstr "{name} telah menerima permohonan pertemanan Anda"
+msgstr "{name} telah menerima ajakan berteman Anda"
 
 msgid "notifications.friendships.nowfriends"
 msgstr "{name} sekarang menjadi teman Anda"
@@ -234,7 +238,7 @@ msgid "notifications.comments.moments.friend.note"
 msgstr "{commenter_name} juga mengomentari catatan {moment_owner_name}: “{comment}”"
 
 msgid "notifications.moments.create.bookmark"
-msgstr "{name} telah markahi {reference_human}"
+msgstr "{name} telah memarkahi {reference_human}"
 
 msgid "notifications.moments.create.highlight"
 msgstr "{name} telah menyoroti {reference_human}"
@@ -243,7 +247,7 @@ msgid "notifications.moments.create.note.reference"
 msgstr "{name} telah menambahkan catatan pada {reference_human}"
 
 msgid "notifications.moments.create.note.title"
-msgstr "{name} telah menambahkan sebuah catatan, “{title}”"
+msgstr "{name} telah menambahi catatan, “{title}”"
 
 msgid "notifications.moments.create.note.no_title_no_reference"
 msgstr "{name} telah menambahkan sebuah catatan"
@@ -263,7 +267,7 @@ msgstr "{name} telah menyelesaikan Rencana Alkitab mereka, {title}"
 #. TRANSLATORS: Plural test
 msgid "notifications.friendships.count"
 msgid_plural "You have %d friend requests"
-msgstr[0] "Anda mempunyai %d permohonan pertemanan"
+msgstr[0] "Anda mempunyai %d ajakan berteman"
 
 msgid "notifications.system.test"
 msgstr "Unduhlah Aplikasi Alkitab Anak kami sekarang!!!"
@@ -275,16 +279,27 @@ msgid "share.invite_sms"
 msgstr "Apakah Anda memiliki Aplikasi Alkitab dari YouVersion? Saya menyukainya, dan saya pikir Anda akan menyukainya juga. Inilah tautannya:"
 
 msgid "share.invite_email_subject"
-msgstr "Apakah Anda memiliki Aplikasi Alkitab?"
+msgstr "Ayo bergabung di Aplikasi Alkitab!"
 
 msgid "share.invite_email_body"
 msgstr ""
-"Saya telah menikmati Aplikasi Alkitab dari YouVersion dan saya pikir Anda mungkin akan menyukainya juga. Akhir-akhir ini, saya lebih sering membuka Alkitab karena sangat mudah dibaca, ditonton, didengarkan dan dibagikan. Bahkan aplikasi ini menyediakan Rencana bacaan, yang mempunyai beberapa pilihan dari Alkitab yang sudah dipetik dan menunggu saya setiap hari.\n"
+"Halo!\n"
 "\n"
-"Anda bisa mendapatkannya (gratis!) untuk hampir semua perangkat mobile di sini:"
+"Saya menggunakan Aplikasi Alkitab dari YouVersion dan ingin membagikannya dengan Anda. Jika Anda baru pertama kali tahu, ini adalah cara mudah untuk membawa keindahan dan kebenaran Alkitab ke dalam hidup sehari-hari.\n"
+"\n"
+"Dapatkan Aplikasi Alkitab: baca, tonton, dengar, dan bagikan di smartphone atau tablet Anda, dan daring di Bible.com\n"
+"\n"
+"Daftarkan akun Anda: berlangganan Rencana Alkitab dan akses markah, sorotan, dan catatan di pelbagai perangkat.\n"
+"\n"
+"Tambahkan teman (seperti saya!): jelajahi dan diskusikan Alkitab dengan orang-orang terkasih.\n"
+"\n"
+"Semuanya ada di Aplikasi Alkitab—mulailah di sini:"
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>Hai!</p><p>Saya menggunakan Aplikasi Alkitab dari YouVersion dan ingin membagikannya dengan Anda. Jika Anda baru pertama kali dengar, ini adalah cara mudah untuk membawa keindahan dan kebenaran Alkitab ke dalam hidup keseharian. </p><p><strong>Dapatkan Aplikasi Alkitab:</strong> baca, tonton, dengar, dan bagikan di smartphone atau tablet Anda, dan daring di Bible.com</p><p><strong>Daftarkan Akun Anda:</strong> berlangganan Rencana Alkitab dan akses markah, sorotan, dan catatan di berbagai perangkat</p><p><strong>Tambahkan Teman (Seperti Saya!):</strong> jelajahi dan diskusikan Alkitab dengan orang-orang yang Anda pedulikan</p><p>Semuanya ada di Aplikasi Alkitab—mulaillah di sini: </p>"
 
 msgid "share.invite_twitter"
-msgstr "Aplikasi Alkitab dari @YouVersion mempunyai tempat tetap di layar utama saya. Baca, lihat, dengar, dan bagikan...semua tersedia dalam aplikasi gratis:"
+msgstr "Aplikasi Alkitab dari @YouVersion mempunyai tempat tetap di layar utama saya. Baca, tonton, dengar, dan bagikan...semua tersedia dalam aplikasi gratis:"
 
 msgid "share.invite_twitter_direct"
 msgstr "Apakah Anda memiliki Aplikasi Alkitab dari @YouVersion? Saya menyukainya, dan saya pikir Anda akan meyukainya juga. Inilah tautannya:"
