--- a/config/locales/po/ja/api.po
+++ b/config/locales/po/ja/api.po
@@ -51,8 +51,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-05 03:20+0000\n"
-"Last-Translator: Tomomi Galeano <tomomi.galeano@gmail.com>\n"
+"PO-Revision-Date: 2014-07-11 15:01+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Japanese (http://www.transifex.com/projects/p/yv-backend/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -264,13 +264,24 @@ msgid "share.invite_sms"
 msgstr "YouVersionの聖書アプリをお持ちですか？私のお気に入りのアプリなので、きっと気に入っていただけるかなと思います。このリンクからどうぞ："
 
 msgid "share.invite_email_subject"
-msgstr "聖書アプリをお持ちですか？"
+msgstr "聖書アプリを一緒に使いましょう！"
 
 msgid "share.invite_email_body"
 msgstr ""
-"YouVersionの聖書アプリを大活用しています。あなたにも気に入っていただけるかな。コンテンツを読んだり、見たり、聞いたり、シェアするのが簡単なので、最近はより頻繁に聖書を開くようになりました。読書プランというものもあって、プランに沿った聖句が毎日、用意されています。\n"
+"こんにちは！\n"
 "\n"
-"様々な携帯用のアプリ ( 無料！) をこちらからダウンロードできます："
+"わたしの使っているYouVersion聖書アプリについてシェアさせてください。聖書の素晴らしい真実を日々の生活に簡単に取り入れることができる便利なアプリですよ。\n"
+"\n"
+"聖書アプリをゲットすれば、スマホやタブレット、Bible.comから、コンテンツを読んだり、見たり、聞いたり、シェアできます。\n"
+"\n"
+"アカウント登録することで、読書プランが利用でき、ご利用のデバイス全機から、ブックマーク、ハイライト、ノートにアクセスできるようになります。\n"
+"\n"
+"友だちを追加することで (私もお願い！)、仲間と一緒に聖書を探求し、話し合うことできます。\n"
+"\n"
+"これらすべてが可能な聖書アプリ － こちらからどうぞ:"
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>こんにちは！</p><p>わたしの使っているYouVersion聖書アプリについてシェアさせてください。聖書の素晴らしい真実を日々の生活に簡単に取り入れることができる便利なアプリですよ。</p><p><strong>聖書アプリをゲット</strong>すれば、スマホやタブレット、Bible.comから、コンテンツを読んだり、見たり、聞いたり、シェアできます。</p><p><strong>アカウント登録</strong>することで、読書プランが利用でき、ご利用のデバイス全機から、ブックマーク、ハイライト、ノートにアクセスできるようになります。</p><p><strong>友だちを追加</strong>することで (私もお願い！)、仲間と一緒に聖書を探求し、話し合うことができます。</p><p>これらすべてが可能な聖書アプリ — こちらからどうぞ: </p>"
 
 msgid "share.invite_twitter"
 msgstr "@YouVersionの聖書アプリを、いつでもホームスクリーンから使えるようにしています。読んだり、見たり、聞いたり、シェアしたり…全てが可能な無料のアプリです："
