--- a/config/locales/po/ko/api.po
+++ b/config/locales/po/ko/api.po
@@ -5,7 +5,7 @@
 # Translators:
 # Translators:
 # Ingu Kang <ingukang@gmail.com>, 2013-2014
-# Kardia77 <michellehjhwang33@gmail.com>, 2013
+# Michelle J Hwang <michellehjhwang33@gmail.com>, 2013
 # Sung Nam <sungheenam@gmail.com>, 2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
@@ -16,7 +16,7 @@
 # chrisvaughn <chris.vaughn@lifechurch.tv>, 2014
 # Ingu Kang <ingukang@gmail.com>, 2013-2014
 # Jason Park <jasonpark9462@gmail.com>, 2014
-# AllieCha <alliecha@gmail.com>, 2013
+# Soojung Cha <alliecha@gmail.com>, 2013
 # Sung Nam <sungheenam@gmail.com>, 2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
@@ -25,7 +25,7 @@
 # Translators:
 # Ingu Kang <ingukang@gmail.com>, 2013-2014
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
-# Sung Nam <sungheenam@gmail.com>, 2013
+# Sung Nam <sungheenam@gmail.com>, 2013-2014
 #, fuzzy
 msgid ""
 msgstr ""
@@ -57,8 +57,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-03 19:31+0000\n"
-"Last-Translator: Ingu Kang <ingukang@gmail.com>\n"
+"PO-Revision-Date: 2014-07-11 15:01+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Korean (http://www.transifex.com/projects/p/yv-backend/language/ko/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -277,6 +277,9 @@ msgstr ""
 "YouVersion 에서 나온 성경 앱을 사용해보니 참 좋아요.  사용하시면 좋아하실거예요.  성경 앱은 사용하기가 쉬워서,  말씀을 읽고, 듣고, 보고, 나누는데 아주 많은 도움이 됩니다.  묵상(성경 읽기계획)은 매일 읽을 성경 구절을 자동으로 선택해줍니다. \n"
 "\n"
 "대부분의 이동 기기에 지원되며 아래 링크에서 무료로 받을 수 있습니다:"
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>안녕하세요?</p><p>YouVersion 에서 제공하는 성경앱을 사용하고 있는데, 사용 소감을 같이 나누고 싶습니다. 진리와 사랑의 성경 말씀을 매일의 삶속으로 가져다주는 앱입니다. </p><p><strong>성경앱 설치</strong>스마트폰이나 태블렛, 또는 Bible,com 온라인 상에서 성경을 읽고 보고 들을 수있습니다.</p><p><strong>계정 설정</strong>묵상 계획을 구독하거나, 책갈피, 하이라이트, 그리고 노트등을 모든 기기를 통해서 설정할 수있습니다. </p><p><strong>친구 신청(내게도요!)</strong>회원님이 소중히 여기시는 분들과 성경을 같이 연구하고 의논해보세요.</p><p>이 모든 것들이 성경 앱안에 있습니다.  바로 시작해보세요. </p>"
 
 msgid "share.invite_twitter"
 msgstr "저는 @YouVersion의 성경 앱을 홈 스크린에 올려놓았습니다.  말씀을 읽고, 보고, 듣고, 공유할 수 있는 무료 앱:"
