--- a/config/locales/po/mk/api.po
+++ b/config/locales/po/mk/api.po
@@ -4,9 +4,9 @@
 # Translators:
 # Translators:
 # Translators:
-# arsov <dejanarsov@gmail.com>, 2014
+# Dejan Arsov <dejanarsov@gmail.com>, 2014
 # Denis Aleksandrov <denal05@gmail.com>, 2013
-# martinnaskovski <martin@naskovski.info>, 2014
+# Martin Naskovski <martin@naskovski.info>, 2014
 # saskop <saskop@gmail.com>, 2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
@@ -14,7 +14,7 @@
 # Translators:
 # Translators:
 # Translators:
-# arsov <dejanarsov@gmail.com>, 2014
+# Dejan Arsov <dejanarsov@gmail.com>, 2014
 # Denis Aleksandrov <denal05@gmail.com>, 2013
 # saskop <saskop@gmail.com>, 2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
@@ -22,9 +22,11 @@
 #
 # Translators:
 # Translators:
-# arsov <dejanarsov@gmail.com>, 2014
+# Dejan Arsov <dejanarsov@gmail.com>, 2014
 # Denis Aleksandrov <denal05@gmail.com>, 2013
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
+# saskop <saskop@gmail.com>, 2014
+# saskop <saskop@gmail.com>, 2014
 #, fuzzy
 msgid ""
 msgstr ""
@@ -45,7 +47,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
 "PO-Revision-Date: 2014-05-20 20:02+0000\n"
-"Last-Translator: arsov <dejanarsov@gmail.com>\n"
+"Last-Translator: Dejan Arsov <dejanarsov@gmail.com>\n"
 "Language-Team: Macedonian (http://www.transifex.com/projects/p/yv-backend/language/mk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -56,8 +58,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-21 17:35+0000\n"
-"Last-Translator: saskop <saskop@gmail.com>\n"
+"PO-Revision-Date: 2014-07-11 15:01+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Macedonian (http://www.transifex.com/projects/p/yv-backend/language/mk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -277,6 +279,9 @@ msgstr ""
 "Веќе некое време ѝ се радувам на апликацијата „Библија“ од YouVersion и мислам дека и на тебе многу ќе ти се допадне. Ја читам Библијата многу повеќе од порано, бидејќи е толку едноставна за читање, слушање, гледање и споделување. Има дури и Планови за читање, кои содржат селекција од Библијата во вид на дневно четиво сервирано за мене секојдневно.\n"
 "\n"
 "Можеш да ја преземеш (бесплатно!) од тука, за речиси сите мобилни уреди:"
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>Hi!</p><p>Јас ја користам Апликацијата Библија, и сакав да ја споделам со тебе. Ако сега започна да ја користиш оваа апликација, знај дека таа претставува едноставен начин да се внесе убавината и вистината на Библијата во секојдневниот живот. </p><p><strong>Превземи ја Апликацијата Библија:</strong> читај, гледај, слушај и сподели ја на твојот паметен телефон или таблет, и читај ја на Bible.com</p><p><strong>Постави ја твојата сметка:</strong> претплати се на Библиски план и имај пристап кон обележувачи, нагласувачи и белешки од сите уреди</p><p><strong>Додај пријатели (Како мене!):</strong> истражи ја и дискутирај за Библијата со луѓе кои ти се драги</p><p>Сѐ е во Апликацијата Библија—започни тука: </p>"
 
 msgid "share.invite_twitter"
 msgstr "Апликацијата „Библија“ од @YouVersion има постојано место на мојот екран. Читај, слушај, гледај и споделувај... сето тоа спакувано во една бесплатна апликација:"
