--- a/config/locales/po/no/api.po
+++ b/config/locales/po/no/api.po
@@ -4,8 +4,9 @@
 # Translators:
 # Translators:
 # Translators:
+# Line Hellem <line@hellem.net>, 2014
 # Per Byrknes <pbyrknes@norea.no>, 2013
-# Terje Bøe <terje.boee@lyse.net>, 2013-2014
+# Terje Boee <terje.boee@lyse.net>, 2013-2014
 # Toralf Liene <liene@pvv.org>, 2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
@@ -13,8 +14,9 @@
 # Translators:
 # Translators:
 # Translators:
+# Line Hellem <line@hellem.net>, 2014
 # Per Byrknes <pbyrknes@norea.no>, 2013
-# Terje Bøe <terje.boee@lyse.net>, 2013-2014
+# Terje Boee <terje.boee@lyse.net>, 2013-2014
 # Toralf Liene <liene@pvv.org>, 2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
@@ -22,8 +24,8 @@
 # Translators:
 # Translators:
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
-# Terje Bøe <terje.boee@lyse.net>, 2013
-# Terje Bøe <terje.boee@lyse.net>, 2013
+# Terje Boee <terje.boee@lyse.net>, 2013-2014
+# Terje Boee <terje.boee@lyse.net>, 2013
 # Toralf Liene <liene@pvv.org>, 2013
 #, fuzzy
 msgid ""
@@ -32,8 +34,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-23 22:21+0000\n"
-"Last-Translator: Toralf Liene <liene@pvv.org>\n"
+"PO-Revision-Date: 2014-06-04 16:41+0000\n"
+"Last-Translator: Line Hellem <line@hellem.net>\n"
 "Language-Team: Norwegian (http://www.transifex.com/projects/p/yv-backend/language/no/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -44,8 +46,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-20 19:42+0000\n"
-"Last-Translator: Terje Bøe <terje.boee@lyse.net>\n"
+"PO-Revision-Date: 2014-06-04 16:41+0000\n"
+"Last-Translator: Line Hellem <line@hellem.net>\n"
 "Language-Team: Norwegian (http://www.transifex.com/projects/p/yv-backend/language/no/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -56,8 +58,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-04 09:54+0000\n"
-"Last-Translator: Terje Bøe <terje.boee@lyse.net>\n"
+"PO-Revision-Date: 2014-07-11 15:01+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Norwegian (http://www.transifex.com/projects/p/yv-backend/language/no/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -102,10 +104,10 @@ msgid "moment.bible.download.self.title"
 msgstr "Du lastet ned versjonen, <b>{version}</b>"
 
 msgid "moment.plan_subscription.title"
-msgstr "{name} begynte på en leseplan"
+msgstr "{name} begynte på en ny leseplan"
 
 msgid "moment.plan_subscription.self.title"
-msgstr "Begynte på en leseplan"
+msgstr "Du begynte på en leseplan"
 
 msgid "moment.plan_segment_completion.title"
 msgstr "{name} fullførte dag <b>{segment}</b> av leseplanen, <b>{title}</b>"
@@ -120,7 +122,7 @@ msgid "moment.plan_completion.title"
 msgstr "{name} fullførte en leseplan"
 
 msgid "moment.plan_completion.self.title"
-msgstr "Fullførte en leseplan"
+msgstr "Du fullførte en leseplan"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} oppnådde <b>{title}</b> merket"
@@ -135,7 +137,7 @@ msgid "moment.video.watched.self.title"
 msgstr "Du så på <b>{title}</b>"
 
 msgid "moment.system.find_friends.title"
-msgstr "Bibel-appen er bedre sammen med venner. Søk gjennom kontaktene for å finne venner."
+msgstr "Bibel-appen er enda bedre sammen med venner. Søk gjennom kontaktene dine for å finne venner."
 
 msgid "notifications.friendships.offer"
 msgstr "{name} ønsker å være din venn på YouVersion"
@@ -159,7 +161,7 @@ msgid "notifications.comments.moment.mine.plan_activity"
 msgstr "{name} kommenterte din leseplan: “{comment}”"
 
 msgid "notifications.comments.moment.mine.plan_activity.push"
-msgstr "{name} kommenterte din bibelplan: “{comment}”"
+msgstr "{name} kommenterte din bibelleseplan: “{comment}”"
 
 msgid "notifications.comments.moment.mine.friendship"
 msgstr "{name} kommenterte ditt nye vennskap med {friend_name}: “{comment}”"
@@ -177,7 +179,7 @@ msgid "notifications.likes.moment.mine.plan_activity"
 msgstr "{name} liker din leseplanaktivitet"
 
 msgid "notifications.likes.moment.mine.plan_activity.push"
-msgstr "{name} liker din bibelplanaktivitet"
+msgstr "{name} liker din bibelleseplanaktivitet"
 
 msgid "notifications.likes.moment.mine.friendship"
 msgstr "{name} liker ditt nye vennskap med {friend_name}"
@@ -210,16 +212,16 @@ msgid "notifications.comments.moments.friend.highlight"
 msgstr "{commenter_name} kommenterte også {moment_owner_name} sin utheving: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.plan_activity"
-msgstr "{moment_owner_name} kommenterte også på deres plan: “{comment}”"
+msgstr "{moment_owner_name} kommenterte også på deres leseplan: “{comment}”"
 
 msgid "notifications.comments.moments.friend.plan_activity"
 msgstr "{commenter_name} kommenterte også {moment_owner_name}s leseplan: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.plan_activity.push"
-msgstr "{moment_owner_name} kommenterte også deres bibelplan: “{comment}”"
+msgstr "{moment_owner_name} kommenterte også deres bibelleseplan: “{comment}”"
 
 msgid "notifications.comments.moments.friend.plan_activity.push"
-msgstr "{commenter_name} kommenterte også {moment_owner_name}s bibelplan: “{comment}”"
+msgstr "{commenter_name} kommenterte også {moment_owner_name}s bibelleseplan: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.note"
 msgstr "{moment_owner_name} kommenterte også notatet deres: “{comment}”"
@@ -246,13 +248,13 @@ msgid "notifications.moments.create.plan_subscription"
 msgstr "{name} begynte på en ny leseplan, {title}"
 
 msgid "notifications.moments.create.plan_subscription.push"
-msgstr "{name} begynte på en ny bibelplan, {title}"
+msgstr "{name} begynte på en ny bibelleseplan, {title}"
 
 msgid "notifications.moments.create.plan_completion"
 msgstr "{name} fullførte deres leseplan, {title}"
 
 msgid "notifications.moments.create.plan_completion.push"
-msgstr "{name} fullførte deres bibelplan, {title}"
+msgstr "{name} fullførte deres bibelleseplan, {title}"
 
 #. TRANSLATORS: Plural test
 msgid "notifications.friendships.count"
@@ -277,6 +279,9 @@ msgstr ""
 "Jeg har glede av Bibel-appen fra YouVersion, og tror at du også vil like den. Jeg åpner Bibelen mer nå fordi det er så lett å lese, se, lytte og dele. Den har også leseplaner, der utvalgte deler av Bibelen venter på meg hver dag. \n"
 "\n"
 "Du kan få den (gratis!) for så godt som alle mobile enheter her:"
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>Hei!</p><p>Jeg bruker Bibel-appen fra YouVersion og ønsker å dele denne med deg. Dersom du ikke kjenner denne fra før, er det en enkel måte å bringe skjønnheten og sannheten fra Bibelen inn i hverdagen din. </p><p><strong>Last ned Bibel-appen:</strong> les, se, hør og del på smarttelefonen eller nettbrettet ditt, og på www.bible.com/no</p><p><strong>Opprett din egen konto:</strong> abonner på bibelleseplaner og ha tilgang til bokmerker, markeringer og notater på alle plattformer.</p><p><strong>Legg til venner (Lik meg!):</strong> utforsk og diskuter Bibelen med personer du bryr deg om</p><p>Alt dette får du i Bibel-appen - kom i gang her: </p>"
 
 msgid "share.invite_twitter"
 msgstr "Bibel-appen fra @YouVersion er plassert på førstesiden på skjermen min. Les, se, lytt og del - alt i en gratis app:"
