--- a/config/locales/po/pt_PT/api.po
+++ b/config/locales/po/pt_PT/api.po
@@ -4,30 +4,31 @@
 # Translators:
 # Translators:
 # Translators:
-# bcarneiro <barbara@wordrevolution.com>, 2014
-# ptfigueira <ptfigueira@gmail.com>, 2014
-# BadMix <vitor.msilva@gmail.com>, 2013
+# Barbara Carneiro <barbara@wordrevolution.com>, 2014
+# Pedro Figueira <ptfigueira@gmail.com>, 2014
+# Vitor Silva <vitor.msilva@gmail.com>, 2013
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
 # Translators:
 # Translators:
 # Translators:
-# bcarneiro <barbara@wordrevolution.com>, 2014
-# ptfigueira <ptfigueira@gmail.com>, 2014
-# BadMix <vitor.msilva@gmail.com>, 2013
+# Barbara Carneiro <barbara@wordrevolution.com>, 2014
+# Pedro Figueira <ptfigueira@gmail.com>, 2014
+# Vitor Silva <vitor.msilva@gmail.com>, 2013
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
 #
 # Translators:
 # Translators:
-# BadMix <vitor.msilva@gmail.com>, 2013
+# Vitor Silva <vitor.msilva@gmail.com>, 2013
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
-# Lisias Loback <lisias@loback.co.uk>, 2013
-# ptfigueira <ptfigueira@gmail.com>, 2013-2014
-# ptfigueira <ptfigueira@gmail.com>, 2013
-# rbmota <rbmota@gmail.com>, 2014
-# BadMix <vitor.msilva@gmail.com>, 2013
+# Lisias Loback (Lee) <lisias@loback.co.uk>, 2013-2014
+# Lisias Loback (Lee) <lisias@loback.co.uk>, 2013
+# Pedro Figueira <ptfigueira@gmail.com>, 2013-2014
+# Pedro Figueira <ptfigueira@gmail.com>, 2013
+# Ricardo Mota <rbmota@gmail.com>, 2014
+# Vitor Silva <vitor.msilva@gmail.com>, 2013
 #, fuzzy
 msgid ""
 msgstr ""
@@ -36,7 +37,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
 "PO-Revision-Date: 2014-05-20 22:00+0000\n"
-"Last-Translator: Lisias Loback <lisias@loback.co.uk>\n"
+"Last-Translator: Lisias Loback (Lee) <lisias@loback.co.uk>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/projects/p/yv-backend/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -47,8 +48,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-23 01:00+0000\n"
-"Last-Translator: bcarneiro <barbara@wordrevolution.com>\n"
+"PO-Revision-Date: 2014-06-12 11:54+0000\n"
+"Last-Translator: Barbara Carneiro <barbara@wordrevolution.com>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/projects/p/yv-backend/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -59,8 +60,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-03 10:48+0000\n"
-"Last-Translator: Lisias Loback <lisias@loback.co.uk>\n"
+"PO-Revision-Date: 2014-07-11 15:53+0000\n"
+"Last-Translator: Lisias Loback (Lee) <lisias@loback.co.uk>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/projects/p/yv-backend/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -273,13 +274,24 @@ msgid "share.invite_sms"
 msgstr "Já tem a App da Bíblia do YouVersion? Eu gosto e acho que também irá gostar. Aqui tem o link:"
 
 msgid "share.invite_email_subject"
-msgstr "Já tem a App da Bíblia?"
+msgstr "Junte-se a mim na App da Bíblia!"
 
 msgid "share.invite_email_body"
 msgstr ""
-"Eu tenho desfrutado da App da Bíblia do YouVersion e achei que também iria gostar. Abro a Bíblia muito mais nos dias que correm, porque é muito fácil de ler, ver, ouvir e partilhar. A app da Bíblia até tem Planos, que têm uma seleção de textos escolhidos e à minha espera a cada dia. \n"
+"Olá!\n"
 "\n"
-"Pode obtê-la (gratuitamente!) para praticamente qualquer dispositivo móvel aqui:"
+"Estou a usar a App da Bíblia do YouVersion e quero partilhá-la consigo. Se não conhece a app, é uma forma simples de trazer a beleza e verdade da Bíblia para a vida quotidiana.\n"
+"\n"
+"Obtenha a App da Bíblia: leia, veja, escute e partilhe no seu smartphone ou tablet e online em Bible.com.\n"
+"\n"
+"Crie a sua conta: subscreva Planos da Bíblia e aceda a marcadores, destaques e notas em todos os dispositivos.\n"
+"\n"
+"Adicione amigos (como eu!): explore e discuta a Bíblia com pessoas de quem gosta.\n"
+"\n"
+"Está tudo na App da Bíblia—comece aqui:"
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>Olá!</p><p>Estou a usar a App da Bíblia do YouVersion e quero partilhá-la consigo. Se não conhece a app, é uma forma simples de trazer a beleza e verdade da Bíblia para a vida quotidiana.</p><p><strong>Obtenha a App da Bíblia:</strong> leia, veja, escute e partilhe no seu smartphone ou tablet e online em Bible.com</p><p><strong>Crie a sua conta:</strong> subscreva Planos da Bíblia e aceda a marcadores, destaques e notas em todos os dispositivos</p><p><strong>Adicione amigos (como eu!):</strong> explore e discuta a Bíblia com pessoas de quem gosta</p><p>Está tudo na App da Bíblia—comece aqui: </p>"
 
 msgid "share.invite_twitter"
 msgstr "A App da Bíblia do @YouVersion tem um lugar permanente na minha página inicial. Leia, veja, oiça e partilhe... tudo numa app gratuita:"
