--- a/config/locales/po/ro/api.po
+++ b/config/locales/po/ro/api.po
@@ -7,7 +7,7 @@
 # Corina Teodorescu <corinasmile@gmail.com>, 2014
 # Cristian Cotovan <cristi.cotovan@gmail.com>, 2013
 # Dragoslav <drsek2@gmail.com>, 2014
-# Nick Negoita <ncnego@gmail.com>, 2013-2014
+# Nicolae Negoita <ncnego@gmail.com>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
@@ -16,15 +16,17 @@
 # Translators:
 # Corina Teodorescu <corinasmile@gmail.com>, 2014
 # Dragoslav <drsek2@gmail.com>, 2013
-# Nick Negoita <ncnego@gmail.com>, 2013-2014
+# Nicolae Negoita <ncnego@gmail.com>, 2013-2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
 #
 # Translators:
 # Translators:
+# Corina Teodorescu <corinasmile@gmail.com>, 2014
 # Dragoslav <drsek2@gmail.com>, 2013
 # Dragoslav <drsek2@gmail.com>, 2013-2014
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
+# Nicolae Negoita <ncnego@gmail.com>, 2014
 #, fuzzy
 msgid ""
 msgstr ""
@@ -33,7 +35,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
 "PO-Revision-Date: 2014-05-20 20:27+0000\n"
-"Last-Translator: Nick Negoita <ncnego@gmail.com>\n"
+"Last-Translator: Nicolae Negoita <ncnego@gmail.com>\n"
 "Language-Team: Romanian (http://www.transifex.com/projects/p/yv-backend/language/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -45,7 +47,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
 "PO-Revision-Date: 2014-05-20 20:42+0000\n"
-"Last-Translator: Nick Negoita <ncnego@gmail.com>\n"
+"Last-Translator: Nicolae Negoita <ncnego@gmail.com>\n"
 "Language-Team: Romanian (http://www.transifex.com/projects/p/yv-backend/language/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -56,7 +58,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 16:51+0000\n"
+"PO-Revision-Date: 2014-07-11 15:32+0000\n"
 "Last-Translator: Dragoslav <drsek2@gmail.com>\n"
 "Language-Team: Romanian (http://www.transifex.com/projects/p/yv-backend/language/ro/)\n"
 "MIME-Version: 1.0\n"
@@ -271,13 +273,24 @@ msgid "share.invite_sms"
 msgstr "Ai aplicația Biblia de la YouVersion? Mie îmi place foarte mult și cred că ți-ar place și ție. Iată legătura, în caz că nu o știai deja:"
 
 msgid "share.invite_email_subject"
-msgstr "Ai aplicația Biblia de la YouVersion?"
+msgstr "Vino alături în Aplicația Biblia!"
 
 msgid "share.invite_email_body"
 msgstr ""
-"Mă bucur de Aplicația Biblia de la YouVersion și mă gândeam că ți-ar place și ție. Acum deschid Biblia mult mai des pentru că e așa de ușor de citit, de vizionat, de ascultat și de împărtășit. Are chiar și planuri de citire, selectate și alese din Biblie care mă așteaptă în fiecare zi.\n"
+"Salutare!\n"
 "\n"
-"O poți lua (gratuit!), pentru majoritatea dispozitivelor mobile, de aici:"
+"Eu folosesc Aplicația Biblia de la YouVersion și voiam să-ți spun și ție. Este o modalitate simplă prin care poți aduce frumusețea și adevărul Cuvântului lui Dumnezeu în viața ta de zi cu zi.\n"
+"\n"
+"Instalează Aplicația Biblia: citește, vizionează, ascultă și împărtășește pe telefonul sau tableta ta, precum și online pe Bible.com,\n"
+"\n"
+"Configurează-ți contul: abonează-te la planuri de citire și accesează semne de carte, evidențieri și notițe de pe diverse dispozitive.\n"
+"\n"
+"Adaugă prieteni (ca mine!): explorează și citește Biblia cu persoane care sunt importante pentru tine.\n"
+"\n"
+"Găsești totul în aplicația Biblia—pornește de aci:"
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>Bună!</p><p>Eu folosesc aplicația Biblia de la YouVersion și am vrut să împărtășesc cu tine acest lucru. Dacă ești un nou utilizator al aplicației, acesta este un mod simplu de a aduce frumusețea și adevărul Bibliei în viața de zi cu zi. </p><p><strong>Descarcă aplicația Biblia:</strong> citește, privește, ascultă și distribuie folosind un smartphone sau o tabletă, dar și pe site-ul Bible.com</p><p><strong>Configurează-ți contul:</strong> abonează-te la Planuri biblice și accesează marcaje, evidențieri și notițe de pe mai multe dispozitive.</p><p><strong>Adaugă Prieteni (ca mine!):</strong> explorează și discută Biblia împreună cu oamenii de care îți pasă</p><p>Totul în cadrul aplicației Biblia—începe de aici: </p>"
 
 msgid "share.invite_twitter"
 msgstr "Aplicația Biblia de la @YouVersion are un loc permanent pe ecranul meu de pornire. Citesc, vizionez, ascult și partajez...toate acestea cu o aplicație gratuită:"
