--- a/config/locales/po/ru/api.po
+++ b/config/locales/po/ru/api.po
@@ -4,7 +4,7 @@
 # Translators:
 # Translators:
 # Translators:
-# Anna.Malevici, 2014
+# Anna Malevici, 2014
 # Azat Kooman <azatkooman@gmail.com>, 2014
 # Vitaliy Kolesov <vitaliy.kolesov@gmail.com>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
@@ -13,13 +13,15 @@
 # Translators:
 # Translators:
 # Translators:
-# Anna.Malevici, 2014
+# Anna Malevici, 2014
 # Vitaliy Kolesov <vitaliy.kolesov@gmail.com>, 2013-2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
 #
 # Translators:
 # Translators:
+# Anna Malevici, 2014
+# Anna Malevici, 2014
 # Vitaliy Kolesov <vitaliy.kolesov@gmail.com>, 2013-2014
 #, fuzzy
 msgid ""
@@ -28,8 +30,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-21 05:41+0000\n"
-"Last-Translator: Anna.Malevici\n"
+"PO-Revision-Date: 2014-07-03 13:36+0000\n"
+"Last-Translator: Volodymyr Kustlyvy <kustlyvy@hotmail.com>\n"
 "Language-Team: Russian (http://www.transifex.com/projects/p/yv-backend/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -41,7 +43,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
 "PO-Revision-Date: 2014-05-21 06:01+0000\n"
-"Last-Translator: Anna.Malevici\n"
+"Last-Translator: Anna Malevici\n"
 "Language-Team: Russian (http://www.transifex.com/projects/p/yv-backend/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -52,8 +54,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-05 22:50+0000\n"
-"Last-Translator: Vitaliy Kolesov <vitaliy.kolesov@gmail.com>\n"
+"PO-Revision-Date: 2014-07-11 15:01+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Russian (http://www.transifex.com/projects/p/yv-backend/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -274,6 +276,9 @@ msgstr ""
 "Мне очень нравится приложение Библия от YouVersion, думаю, оно понравится и вам! С этим приложением я открываю Библию намного чаще: читаю, смотрю, слушаю и делюсь избранными отрывками с друзьями. В приложении есть даже планы чтения, помогающие читать Библию каждый день!\n"
 "\n"
 "Приложение работает почти на любом мобильном устройстве (и главное — оно бесплатно)! Скачать можно здесь:"
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>Привет!</p><p>Я пользуюсь приложением Библия от YouVersion и хотел бы поделиться им с вами. Если вы еще не знакомы с этим приложением, то могу сказать, что оно является наиболее доступным и легким способом, благодаря которому вы можете внести красоту и правду Библии в свою повседневную жизнь. </p><p><strong>Скачайте приложение Библия:</strong> читайте, смотрите, слушайте и делитесь на своем смартфоне или планшете, и онлайн на Bible.com</p><p><strong>Настройте ваш аккаунт:</strong> подпишитесь на план чтения Библии и у вас будет доступ к закладкам, к выделениям цветом и к заметкам с любого устройства</p><p><strong>Добавьте друзей (Не забудьте обо мне!):</strong> изучайте и обсуждайте Библию с людьми, которые вам небезразличны</p><p>Всё это в приложении Библия! Начните прямо сейчас: </p>"
 
 msgid "share.invite_twitter"
 msgstr "Приложение Библия от @YouVersion — постоянный гость на экране моего телефона. Читай, смотри, слушай, делись с помощью бесплатного приложения:"
