--- a/config/locales/po/sk/api.po
+++ b/config/locales/po/sk/api.po
@@ -4,7 +4,7 @@
 # Translators:
 # Translators:
 # Translators:
-# MarianOpiela <opiela.marian@gmail.com>, 2013-2014
+# Marián Opiela <opiela.marian@gmail.com>, 2013-2014
 # Tomáš Petrík <tomas0907@gmail.com>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
@@ -12,7 +12,7 @@
 # Translators:
 # Translators:
 # Translators:
-# MarianOpiela <opiela.marian@gmail.com>, 2014
+# Marián Opiela <opiela.marian@gmail.com>, 2014
 # Tomáš Petrík <tomas0907@gmail.com>, 2013-2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
@@ -20,6 +20,7 @@
 # Translators:
 # Translators:
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
+# Marián Opiela <opiela.marian@gmail.com>, 2014
 # Tomáš Petrík <tomas0907@gmail.com>, 2013
 #, fuzzy
 msgid ""
@@ -52,8 +53,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 16:21+0000\n"
-"Last-Translator: Tomáš Petrík <tomas0907@gmail.com>\n"
+"PO-Revision-Date: 2014-07-11 15:01+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Slovak (http://www.transifex.com/projects/p/yv-backend/language/sk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -274,6 +275,9 @@ msgstr ""
 "Používam aplikáciu Biblia od YouVersion a myslím si, že by sa ti tiež mohla páčiť. Odkedy ju mám, otváram Bibliu oveľa častejšie, pretože je veľmi jednoduché ju čítať, sledovať, počúvať a zdieľať. Dokonca má aj plány čítania, kde každý deň na mňa čaká vybraná pasáž Biblie.\n"
 "\n"
 "Z tohto odkazu si ju môžeš nainštalovať (zadarmo!) na takmer akékoľvek mobilné zariadenie:"
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>Ahoj!</p><p>Používam aplikáciu Biblia od YouVersion a chcel by som ju odporučiť aj tebe. Ak si o nej ešte nepočul, je to jednoduchý spôsob ako priniesť krásu a pravdu Biblie do každodenného života. </p><p><strong>Stiahni si aplikáciu Biblia:</strong> čítaj, pozeraj, počúvaj a zdieľaj na tvojom smartfóne či tablete a online na Bible.com</p><p><strong>Nastav si svoj účet:</strong> začni používať plány čítania Biblie a pristupuj k záložkám, zvýrazneniam a poznámkam na všetkých zariadeniach</p><p><strong>Pridaj si priateľov (Napríklad mňa!):</strong> skúmaj a diskutuj o Biblii s ľuďmi, na ktorých ti záleží</p><p>To všetko nájdeš v aplikácii Biblia—začni tu: </p>"
 
 msgid "share.invite_twitter"
 msgstr "Aplikáciu Biblia od @YouVersion mám na domovskej obrazovke. Čítaj, sleduj, počúvaj a zdieľaj...zadarmo v aplikácii:"
