--- a/config/locales/po/th/api.po
+++ b/config/locales/po/th/api.po
@@ -20,6 +20,7 @@
 # Translators:
 # Translators:
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
+# mazza cheewanich <mazza.p@gmail.com>, 2014
 # Saowapak Choomwattana <saowapakch@gmail.com>, 2013
 # Thanakorn Poonsingoon <mintgloryofgod@gmail.com>, 2013-2014
 #, fuzzy
@@ -53,8 +54,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-17 03:05+0000\n"
-"Last-Translator: Thanakorn Poonsingoon <mintgloryofgod@gmail.com>\n"
+"PO-Revision-Date: 2014-07-11 15:01+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Thai (http://www.transifex.com/projects/p/yv-backend/language/th/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -263,25 +264,38 @@ msgid "share.invite_sms_prefix"
 msgstr "จาก {name}:"
 
 msgid "share.invite_sms"
-msgstr "คุณมีแอพพระคัมภีร์จาก YouVersion หรือยัง? ฉันชอบมัน และฉันคิดว่าคุณต้องชอบด้วย และนี่เป็นลิงค์ถ้าคุณต้องการ:"
+msgstr "คุณมีแอพพระคัมภีร์จาก YouVersion หรือยัง? ฉันชอบมัน และฉันคิดว่าคุณต้องชอบด้วย กดลิงค์นี้นะ:"
 
 msgid "share.invite_email_subject"
-msgstr "คุณมีแอพพระคัมภีร์หรือยัง?"
+msgstr "มาใช้แอพพระคัมภีร์ด้วยกันไหม!"
 
 msgid "share.invite_email_body"
 msgstr ""
-"ฉันชื่นชอบแอพพระคัมภีร์จาก YouVersion และคิดว่าคุณต้องชอบด้วย ฉันเปิดอ่านพระคัมภีร์ มากขึ้นในทุกวันเพราะ ง่ายต่อการอ่าน, ดู, ฟัง, และแบ่งปัน ทั้งยังแผนการอ่าน, ซึ่งช่วยในการเลือกพระคัมภีร์ทั้งหมด และรอให้ฉันเข้าไปอ่านทุกวัน.\n"
+"สวัสดี!\n"
 "\n"
-"คุณสามารถโหลดได้ (ฟรี!) สำหรับอุปกรณ์มือถือทุกเครื่องที่นี่:"
+"ฉันกำลังใช้แอพพระคัมภีร์ของ YouVersion และอยากจะชวนคุณให้ใช้ด้วย ถ้าคุณยังไม่เคยใช้ นี่เป็นวิธีง่ายๆ ที่จะนำความงดงามและความจริงของพระคัมภีร์มาในชีวิตทุกๆ วัน\n"
+"\n"
+"ลงแอพพระคัมภีร์: อ่าน ดู ฟัง และแบ่งปันบนโทรศัพท์มือถือ หรือแท็บเบล็ตของคุณ และสามารถออนไลน์ได้ที่ Bible.com\n"
+"\n"
+"สร้างบัญชีผู้ใช้ของคุณ: บอกรับแผนการอ่านพระคัมภีร์ และสามารถคั่นหน้า เน้นข้อความ และจดบันทึกผ่านอุปกรณ์ต่างๆ\n"
+"\n"
+"เพิ่มเพื่อน (เป็นต้นว่าฉันไง!): ค้นคว้า และพูดคุยในเรื่องพระคัมภีร์กับคนที่คุณห่วงใย\n"
+"\n"
+"ทั้งหมดนี้อยู่ในแอพพระคัมภีร์---เริ่มใช้ได้ที่นี่:"
+
+msgid "share.find_friends.invite_email_html"
+msgstr ""
+"<p>สวัสดี!</p><p>ฉันกำลังใช้แอพพระคัมภีร์ของ YouVersion และอยากจะชวนคุณให้ใช้ด้วย ถ้าคุณยังไม่เคยใช้ นี่เป็นวิธีง่ายๆ ที่จะนำความงดงามและความจริงของพระคัมภีร์มาในชีวิตทุกๆ วัน </p><p><strong>\n"
+"ลงแอพพระคัมภีร์: </strong>อ่าน ดู ฟัง และแบ่งปันบนโทรศัพท์มือถือ หรือแท็บเบล็ตของคุณ และสามารถออนไลน์ได้ที่ Bible.com</p><p><strong>สร้างบัญชีผู้ใช้ของคุณ: </strong>บอกรับแผนการอ่านพระคัมภีร์ และสามารถคั่นหน้า เน้นข้อความ และจดบันทึกผ่านอุปกรณ์ต่างๆ </p><p><strong>เพิ่มเพื่อน (เป็นต้นว่าฉันไง!): </strong>ค้นคว้า และพูดคุยในเรื่องพระคัมภีร์กับคนที่คุณห่วงใย </p><p>ทั้งหมดนี้อยู่ในแอพพระคัมภีร์---เริ่มใช้ได้ที่นี่: </p>"
 
 msgid "share.invite_twitter"
-msgstr "แอพพระคัมภีร์จาก @YouVersion อยู่บน home screen ของฉัน. อ่าน, ดู, ฟัง, และ แบ่งปัน...ทั้งหมด ในแอพฟรี:"
+msgstr "แอพพระคัมภีร์จาก @YouVersion ฝังอยู่บนหน้าจอหลักของฉัน อ่าน, ดู, ฟัง, และ แบ่งปัน...ทั้งหมดนี้ในแอพฟรี:"
 
 msgid "share.invite_twitter_direct"
-msgstr "คุณมีแอพพระคัมภีร์จาก @YouVersion หรือยัง? ฉันชอบมัน, และคิดว่าคุณต้องชอบด้วย. นี่คือลิ้งค์ถ้าคุณต้องการ:"
+msgstr "คุณมีแอพพระคัมภีร์จาก @YouVersion หรือยัง? ฉันชอบมัน และคิดว่าคุณต้องชอบด้วย กดลิงค์นี้นะ:"
 
 msgid "share.invite_facebook"
-msgstr "ฉันรักแอพพระคัมภีร์! มันสามารถช่วยให้พระคัมภีร์เป็นส่วนหนึ่งในชีวิตประจำวันของฉัน. แอพนี้ให้ฉันเน้นพระคำ, ฟังพระคัมภีร์แบบเสียง, สร้างโน๊ต, ติดตามแผนการอ่าน...รวมถึงการดูวีดีโอ! คุณสามารถดาวน์โหลดได้เดี๋ยวนี้ (ทั้งหมดฟรี):"
+msgstr "ฉันรักแอพพระคัมภีร์! มันสามารถช่วยให้พระคัมภีร์เป็นส่วนหนึ่งในชีวิตประจำวันของฉัน แอพนี้ให้ฉันเน้นข้อพระคำ, ฟังพระคัมภีร์แบบเสียง, จดบันทึก, อ่านตามแผนการอ่าน...หรือแม้แต่ดูวีดีโอ! ลองดาวน์โหลดได้ตอนนี้ (ฟรี):"
 
 msgid "share.invite_facebook_direct"
-msgstr "คุณมีแอพพระคัมภีร์หรือยัง? ฉันชอบมัน และฉันคิดว่าคุณต้องชอบด้วย นี่เป็นลิงค์ถ้าคุณต้องการ:"
+msgstr "คุณมีแอพพระคัมภีร์หรือยัง? ฉันชอบมัน และฉันคิดว่าคุณต้องชอบด้วย กดลิงค์นี้นะ:"
