--- a/config/locales/po/tr/api.po
+++ b/config/locales/po/tr/api.po
@@ -4,23 +4,28 @@
 # Translators:
 # Translators:
 # Translators:
+# Caleb Maclennan <alerque@gmail.com>, 2014
 # Josh W <wolfhawke@wolfhawke.com>, 2013-2014
-# melekcp <melekcansu@gmail.com>, 2013-2014
+# Melek Cansu Petek <melekcansu@gmail.com>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
 # Translators:
 # Translators:
 # Translators:
+# Caleb Maclennan <alerque@gmail.com>, 2014
 # Josh W <wolfhawke@wolfhawke.com>, 2013-2014
-# melekcp <melekcansu@gmail.com>, 2013-2014
+# Melek Cansu Petek <melekcansu@gmail.com>, 2013-2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
 #
 # Translators:
 # Translators:
 # Anke Stoye <ankestoyeyouversion@gmail.com>, 2013
+# Caleb Maclennan <alerque@gmail.com>, 2014
 # Josh W <wolfhawke@wolfhawke.com>, 2013
+# nicholas_drake <nickmarsha@gmail.com>, 2014
+# nicholas_drake <nickmarsha@gmail.com>, 2014
 #, fuzzy
 msgid ""
 msgstr ""
@@ -28,8 +33,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-23 17:12+0000\n"
-"Last-Translator: melekcp <melekcansu@gmail.com>\n"
+"PO-Revision-Date: 2014-06-02 07:51+0000\n"
+"Last-Translator: Caleb Maclennan <alerque@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/projects/p/yv-backend/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,8 +45,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-23 17:01+0000\n"
-"Last-Translator: melekcp <melekcansu@gmail.com>\n"
+"PO-Revision-Date: 2014-06-02 07:51+0000\n"
+"Last-Translator: Caleb Maclennan <alerque@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/projects/p/yv-backend/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -52,7 +57,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 16:21+0000\n"
+"PO-Revision-Date: 2014-07-11 15:01+0000\n"
 "Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Turkish (http://www.transifex.com/projects/p/yv-backend/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -104,10 +109,10 @@ msgid "moment.plan_subscription.self.title"
 msgstr "Okuma planını başlandı"
 
 msgid "moment.plan_segment_completion.title"
-msgstr "{name}, <b>{title}</b> başlıklı okuma planının <b>{segment}</b> gününü tamamladı."
+msgstr "{name}, <b>{title}</b> başlıklı okuma planının <b>{segment}</b> gününü tamamladı"
 
 msgid "moment.plan_segment_completion.self.title"
-msgstr "<b>{title}</b> başlıklı okuma planının <b>{segment}</b> gününü tamamladınız."
+msgstr "<b>{title}</b> başlıklı okuma planının <b>{segment}</b> gününü tamamladınız"
 
 msgid "moment.plan_segment_completion.body"
 msgstr "Toplam {total_segments} günden {segment} (%{percent_complete})"
@@ -164,10 +169,10 @@ msgid "notifications.comments.moment.mine.note"
 msgstr "{name} notunuz hakkında yorum yaptı: “{comment}”"
 
 msgid "notifications.likes.moment.mine.bookmark"
-msgstr "{name} {reference_human} ile ilgili yer iminizi beğendi"
+msgstr "{name} {reference_human} bağlı yer iminizi beğendi"
 
 msgid "notifications.likes.moment.mine.highlight"
-msgstr "{name} {reference_human} başlıklı yer iminizi beğendi"
+msgstr "{name} {reference_human} üzerinde yer iminizi beğendi"
 
 msgid "notifications.likes.moment.mine.plan_activity"
 msgstr "{name} okuma planı aktivitenizi beğendi"
@@ -179,7 +184,7 @@ msgid "notifications.likes.moment.mine.friendship"
 msgstr "{name} {friend_name} kişisiyle arkadaşlığınızı beğendi"
 
 msgid "notifications.likes.moment.mine.note.reference"
-msgstr "{name} {reference_human} konulu notunuzu beğendi"
+msgstr "{name} {reference_human} üzerinde yaptığınız notu beğendi"
 
 msgid "notifications.likes.moment.mine.note.title"
 msgstr "{name} “{title}” başlıklı notunuzu beğendi"
@@ -191,37 +196,37 @@ msgid "notifications.comments.moments.friend.owner.bookmark"
 msgstr "{moment_owner_name} de kendi yer imi hakkında yorum yaptı: “{comment}”"
 
 msgid "notifications.comments.moments.friend.bookmark"
-msgstr "{commenter_name} de {moment_owner_name} 'in yer imi hakkında yorum yaptı: “{comment}”"
+msgstr "{commenter_name} de {moment_owner_name} kişisinin yer imi hakkında yorum yaptı: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.friendship"
 msgstr "{moment_owner_name} de {friend_name} kişisiyle arkadaşlığı hakkında yorum yaptı: “{comment}”"
 
 msgid "notifications.comments.moments.friend.friendship"
-msgstr "{commenter_name} kişisi de {moment_owner_name}'nin {friend_name} ile yeni arkadaşlığı hakkında yorum yaptı: “{comment}”"
+msgstr "{commenter_name} de {moment_owner_name} kişisinin {friend_name} ile yeni arkadaşlığı hakkında yorum yaptı: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.highlight"
-msgstr "{moment_owner_name} de vurgusu hakkında yorum yaptı: “{comment}”"
+msgstr "{moment_owner_name} de kendi vurgusu hakkında yorum yaptı: “{comment}”"
 
 msgid "notifications.comments.moments.friend.highlight"
-msgstr "{commenter_name} de {moment_owner_name} 'in vurgusu hakkında yorum yaptı: “{comment}”"
+msgstr "{commenter_name} de {moment_owner_name} kişisinin vurgusu hakkında yorum yaptı: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.plan_activity"
 msgstr "{moment_owner_name} de kendi okuma planı hakkında yorum yaptı: “{comment}”"
 
 msgid "notifications.comments.moments.friend.plan_activity"
-msgstr "{commenter_name} kişisi de {moment_owner_name}'nin okuma planı hakkında yorum yaptı: “{comment}”"
+msgstr "{commenter_name} de {moment_owner_name} kişisinin okuma planı hakkında yorum yaptı: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.plan_activity.push"
 msgstr "{moment_owner_name} de kendisinin Kutsal Kitap okuma planı hakkında yorum yaptı: “{comment}”"
 
 msgid "notifications.comments.moments.friend.plan_activity.push"
-msgstr "{commenter_name} kişisi de {moment_owner_name}'nin Kutsal Kitap okuma planı hakkında yorum yaptı: “{comment}”"
+msgstr "{commenter_name} kişisi de {moment_owner_name} kişisinin Kutsal Kitap okuma planı hakkında yorum yaptı: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.note"
-msgstr "{moment_owner_name} de notu hakkında yorum yaptı: “{comment}”"
+msgstr "{moment_owner_name} de kendi notu hakkında yorum yaptı: “{comment}”"
 
 msgid "notifications.comments.moments.friend.note"
-msgstr "{commenter_name} de {moment_owner_name} 'in notu hakkında yorum yaptı: “{comment}”"
+msgstr "{commenter_name} de {moment_owner_name} kişisinin notu hakkında yorum yaptı: “{comment}”"
 
 msgid "notifications.moments.create.bookmark"
 msgstr "{name} {reference_human} ayetini yer imlerine ekledi"
@@ -230,7 +235,7 @@ msgid "notifications.moments.create.highlight"
 msgstr "{name} {reference_human} ayetini vurguladı"
 
 msgid "notifications.moments.create.note.reference"
-msgstr "{name} {reference_human} ayeti hakkında bir not ekledi"
+msgstr "{name} {reference_human} hakkında bir not ekledi"
 
 msgid "notifications.moments.create.note.title"
 msgstr "{name} “{title}” başlıklı bir not ekledi"
@@ -270,12 +275,15 @@ msgstr "Kutsal Kitap Uygulaması sende var mı?"
 
 msgid "share.invite_email_body"
 msgstr ""
-"YouVersion Kutsal Kitap Uygulaması'nı çok beğendim. Seninde onu beğeneceğini düşünüyorum. Kutsal Kİtap'ı okumak, izlemek, dinlemek ve paylaşmak o kadar kolay ki, onu her gün daha sık açıyorum. Benim için Kutsal Kitap'ın bir kısmını zaten seçip okumam için hazırlayan okuma planları bile var.\n"
+"YouVersion Kutsal Kitap Uygulaması'nı çok beğendim. Senin de onu beğeneceğini düşünüyorum. Kutsal Kİtap'ı okumak, izlemek, dinlemek ve paylaşmak o kadar kolay ki, onu her gün daha sık açıyorum. Benim için Kutsal Kitap'ın bir kısmını zaten seçip okumam için hazırlayan okuma planları bile var.\n"
 "\n"
 "Uygulamayı (bedavaya!) az daha tüm mobil cihazlar için buradan indirebilirsin:"
 
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>Merhaba!</p><p>Kutsal Kitap Uygulaması'nı kullanıyorum ve seninle paylaşmak istedim. Eğer uygulamaya yeni olsan, o Kutsal Kitap'ın güzellik ve gerçeğini gündüz hayatına getirmek için kolay bir yol</p><p><strong>Kutsal Kitap Uygulaması'nı alın:</strong> telefon ya da tablette ve onlineda Bible.com'da oku, izle, dinle, ve paylaş</p><p><strong>Hesabını kur:</strong> subscribe to Bible Plans and access bookmarks, highlights, and notes across devices</p><p><strong>Add Friends (Like Me!):</strong> explore and discuss the Bible with people you care about</p><p>It's all in the Bible App—get started here: </p>"
+
 msgid "share.invite_twitter"
-msgstr "@YouVersion-Kutsal Kitap uygulaması ana ekranımda! Oku, izle, dinle ve paylaş - Hepsi bir arada, bedava! "
+msgstr "@YouVersion Kutsal Kitap Uygulaması ana ekranımda! Oku, izle, dinle ve paylaş - Hepsi bir arada, bedava! "
 
 msgid "share.invite_twitter_direct"
 msgstr "@YouVersion Kutsal Kitap Uygulaması sende yüklü mü? Ben kullanıyorum ve onu çok beğeniyorum. Sen de beğenirsin düşünüyorum. İşte linki:"
