--- a/config/locales/po/vi/api.po
+++ b/config/locales/po/vi/api.po
@@ -4,22 +4,23 @@
 # Translators:
 # Translators:
 # Translators:
-# Tien Luu <tienluu1024@yahoo.com>, 2013-2014
+# TienLuu <tienluu1024@yahoo.com>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
 # Translators:
 # Translators:
 # Translators:
-# Tien Luu <tienluu1024@yahoo.com>, 2013-2014
+# TienLuu <tienluu1024@yahoo.com>, 2013-2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
 #
 # Translators:
 # Translators:
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
-# Tien Luu <tienluu1024@yahoo.com>, 2013-2014
-# Tien Luu <tienluu1024@yahoo.com>, 2013
+# TienLuu <tienluu1024@yahoo.com>, 2013-2014
+# TienLuu <tienluu1024@yahoo.com>, 2013
+# TienLuu <tienluu1024@yahoo.com>, 2013
 #, fuzzy
 msgid ""
 msgstr ""
@@ -28,7 +29,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
 "PO-Revision-Date: 2014-05-21 15:02+0000\n"
-"Last-Translator: Tien Luu <tienluu1024@yahoo.com>\n"
+"Last-Translator: TienLuu <tienluu1024@yahoo.com>\n"
 "Language-Team: Vietnamese (http://www.transifex.com/projects/p/yv-backend/language/vi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,7 +41,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
 "PO-Revision-Date: 2014-05-21 15:12+0000\n"
-"Last-Translator: Tien Luu <tienluu1024@yahoo.com>\n"
+"Last-Translator: TienLuu <tienluu1024@yahoo.com>\n"
 "Language-Team: Vietnamese (http://www.transifex.com/projects/p/yv-backend/language/vi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -51,8 +52,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-03 17:31+0000\n"
-"Last-Translator: Tien Luu <tienluu1024@yahoo.com>\n"
+"PO-Revision-Date: 2014-07-11 16:02+0000\n"
+"Last-Translator: TienLuu <tienluu1024@yahoo.com>\n"
 "Language-Team: Vietnamese (http://www.transifex.com/projects/p/yv-backend/language/vi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -264,13 +265,24 @@ msgid "share.invite_sms"
 msgstr "Bạn đã tải App Kinh Thánh của YouVersion chưa? Tôi nghĩ bạn cũng sẽ thích nó như tôi vậy. Nếu bạn chưa tải thì đã có đường dẫn ở đây:"
 
 msgid "share.invite_email_subject"
-msgstr "Bạn đã tải App Kinh Thánh?"
+msgstr "Hãy cùng tải App Kinh Thánh!"
 
 msgid "share.invite_email_body"
 msgstr ""
-"Tôi đang sử dụng App Kinh Thánh của YouVersion và tôi nghĩ bạn cũng sẽ thích. Tôi mở Kinh Thánh thường xuyên hơn vì ứng dụng rất dễ đọc, nghe, xem và chia sẻ. App còn có nhiều kế hoạch đọc Kinh Thánh với các câu gốc được lựa chọn mỗi ngày.\n"
+"Chào bạn!\n"
 "\n"
-"Bạn có thể tải (miễn phí) về hầu hết các thiết bị di động tại:"
+"Tôi đang sử dụng App Kinh Thánh của YouVersion và muốn chia sẻ với bạn. Nếu bạn chưa biết đến app, đây là một công cụ đơn giản để đem chân lý Lời Chúa vào đời sống hằng ngày.\n"
+"\n"
+"Hãy tải App Kinh Thánh: để đọc, xem, nghe và chia sẻ trên di động hoặc máy tính bảng tại Bible.com.\n"
+"\n"
+"Thiết lập tài khoản của bạn: đăng ký các kế hoạch đọc Kinh Thánh, đánh dấu, tô màu và ghi chú - được đồng bộ hóa trên mọi thiết bị.\n"
+"\n"
+"Kết bạn (với tôi chẳng hạn!): khám phá và thảo luận Kinh Thánh cùng gia đình và bạn bè.\n"
+"\n"
+"Tất cả chỉ trong App Kinh Thánh—hãy bắt đầu tại đây:"
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>Chào bạn!</p><p>Tôi đang sử dụng App Kinh Thánh của YouVersion và muốn chia sẻ với bạn. Nếu bạn chưa biết đến app, đây là một công cụ đơn giản để đem chân lý Lời Chúa vào đời sống hằng ngày.</p><p><strong>Hãy tải App Kinh Thánh:</strong> để đọc, xem, nghe và chia sẻ trên di động hoặc máy tính bảng tại Bible.com.</p><p><strong>Thiết lập tài khoản của bạn:</strong> đăng ký các kế hoạch đọc Kinh Thánh, đánh dấu, tô màu và ghi chú - được đồng bộ hóa trên mọi thiết bị.</p><p><strong>Kết bạn (với tôi chẳng hạn!):</strong> khám phá và thảo luận Kinh Thánh cùng gia đình và bạn bè.</p><p>Tất cả chỉ trong App Kinh Thánh—hãy bắt đầu tại đây:</p>"
 
 msgid "share.invite_twitter"
 msgstr "App Kinh Thánh @YouVersion chiếm giữ một vị trí cố định trên màn hình của tôi. Đọc, nghe, xem và chia sẻ... tất cả chỉ trong một ứng dụng miễn phí:"
