--- a/config/locales/po/zh_CN/api.po
+++ b/config/locales/po/zh_CN/api.po
@@ -62,8 +62,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-09 02:30+0000\n"
-"Last-Translator: yushengyan2004 <yushengyan2004@gmail.com>\n"
+"PO-Revision-Date: 2014-07-11 15:01+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/projects/p/yv-backend/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -282,6 +282,9 @@ msgstr ""
 "我很喜欢使用 YouVersion 的圣经软件，我想你也会喜欢的。不管是阅读，看视频，听录音或分享经文，这个圣经软件都很好用，所以现在我接触圣经的次数也更多了。圣经软件甚至还包括了读经计划，提供一系列的精选经文，供我每天阅读。\n"
 "\n"
 "你可以从这里获得适用于大多数移动设备的 (免费的！)圣经软件："
+
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>嗨！</p><p>我想跟您分享我目前在使用着的 YouVersion 圣经软件。如果您没试过这个应用程序，它是将圣经的内涵与真理纳入日常生活的一种简单方法。 </p><p><strong>下载圣经软件：</strong> 在您的智慧型手机或平板电脑上阅读、观赏、聆听，以及分享。您也可以在 Bible.com 在线使用同样的功能。</p><p><strong>设立您的帐户：</strong> 订阅读经计划并在不同的设备上存取您的书签、高亮显示，以及笔记。</p><p><strong>添加朋友 (我就是人选之一！)：</strong> 与您关注的人一起探索与讨论圣经。</p><p>一切都在圣经软件里— 就从这里开始吧： </p>"
 
 msgid "share.invite_twitter"
 msgstr "我将 @YouVersion 的圣经软件常驻在主屏幕上。无论阅读圣经，观看视频，收听录音或分享经文... 都可在这个免费软件中完成："
