pull and update transfix strings

--- a/config/locales/sq.yml
+++ b/config/locales/sq.yml
@@ -111,7 +111,7 @@ sq:
     feature 4: "Lojërat dhe aktivitetet i ndihmojnë fëmijët të mbajnë mend atë që mësojnë"
     feature 5: "Navigim i thjeshtë për fëmijët"
     share:
-      tell friends: "Tregoju shokëve për Programi i Biblës për Fëmijë."
+      tell friends: "Tregoju shokëve për Programin e Biblës për Fëmijë."
       facebook name: "Programi i Biblës për Fëmijët"
       facebook description: "Programi i Biblës për Fëmijë është këtu! Shkarko falas këtë program për iOS dhe Android sot: tregime bashkëvepruese të Biblës për të ndihmuar fëmijën tuaj të mësojë, të luajë dhe të rritet në Fjalën e Perëndisë. www.bible.com/kids"
       facebook link: "http://www.bible.com/kids"
