--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -89,9 +89,42 @@ en-GB:
         title: "Connected Accounts"
   kids:
     bible app: "The Bible App"
+    for: "for"
+    kids: "kids"
+    by youversion: "by YouVersion"
+    help your kids: "Help your kids fall in love with God’s Word."
+    free download: "Download for free!"
+    app store: "Available on the App store"
+    google play: "Get it on Google Play"
+    amazon: "Available at Amazon Appstore for Android"
+    app icon: "App icon for The Bible App for Kids"
+    jesus and friends: "Jesus and friends"
+    interact text: "Interact with the Bible and see it come to life."
+    story text 1: "The garden of Eden"
+    story text 2: "The first Christmas"
+    story text 3: "Joseph, Mary, and the baby Jesus in the manger"
+    story text 4: "Angels appear to the sheperds to tell them about the birth of Christ"
+    story text 5: "Jesus heals the paralytic"
+    feature 1: "A free Bible experience for your kids"
+    feature 2: "Animated storybook app for smartphones and tablets"
+    feature 3: "Colorful illustrations with touch-activated animations"
+    feature 4: "Games and activities help kids remember what they learn"
+    feature 5: "Kid-friendly navigation"
     share:
+      tell friends: "Tell your friends about the Bible App for Kids."
       facebook name: "The Bible App for Kids"
+      facebook description: "The Bible App for Kids is here! Download the free app for iOS and Android today: interactive Bible stories to help your child learn, play, and grow in God’s Word. www.bible.com/kids"
+      facebook link: "http://www.bible.com/kids"
+      facebook redirect: "http://www.bible.com/kids"
+      twitter description: "The Bible App for Kids from @YouVersion is here! It’s fun and completely free. Download: bible.com/kids"
+      twitter hashtags: "kidsbible"
       email: "E-mail"
+      email subject: "The Bible App for Kids is here!"
+      email body: "Great news - the Bible App for Kids is here! It’s completely free and it’s available now for iPhone, iPad, iPod touch, and Android devices. The app is a growing collection of Bible stories with touch-activated animations and learning activities, perfect for helping kids learn the big stories of the Bible. Go to bible.com/kids on your mobile device to download it today."
+    partner:
+      youversion: "YouVersion: The world’s most popular Bible App"
+      in partnership: "in partnership with"
+      one hope: "One Hope: Extraordinary Bible content for Kids"
   now: "Now"
   celebrating 50MM: "Celebrating 50 Million App Installations!"
   link: "Link"
