--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -93,7 +93,7 @@ es:
     kids: "niños"
     by youversion: "por YouVersion"
     help your kids: "Ayuda a los niños a enamorarse de la Palabra de Dios."
-    free download: "¡Descárgala Totalmente Gratis!"
+    free download: "¡Próximamente!"
     app store: "Disponible en la App Store"
     google play: "Obténgala a través de Google Play"
     amazon: "Disponible en la App Store de Amazon para Android"
@@ -113,16 +113,16 @@ es:
     share:
       tell friends: "Comparta con sus amigos La Biblia App para Niños."
       facebook name: "La Biblia App Para Niños"
-      facebook description: "¡La Biblia App para Niños está disponible ya! Descargue la app gratis para iOS y Android hoy: historias bíblicas interactivas para ayudar que sus niños aprendan, jueguen, y crezcan en la Palabra de Dios.  www.bible.com/ninos"
+      facebook description: "¡La Biblia App para niños viene pronto! Me emociona que los niños tengan su propia Biblia App para que puedan aprender, jugar y crecer en la Palabra de Dios. Van a ser capaces de explorar una creciente colección de historias de la Biblia con animaciones táctiles activadas y actividades de aprendizaje. Y es gratis, por lo que toda la familia puede instalarlo en nuestros dispositivos iOS, Android y Kindle. Puedes tener una vista previa en bible.com/ninos"
       facebook link: "http://www.bible.com/ninos"
       facebook redirect: "http://www.bible.com/ninos"
-      twitter description: "¡Ya esta disponible La Bíblia App para Niños de @YouVersion! Es divertida y completamente gratis. Descárgala ahora mismo: bible.com/ninos"
+      twitter description: "¡La Biblia App para Niños viene pronto! Ten una vista previa en bible.com/ninos"
       twitter hashtags: "BibliaParaNiños"
       email: "Correo Electrónico"
-      email subject: "¡Ya esta disponible La Biblia App para Niños!"
-      email body: "¡Gran noticia - la Biblia App para Niños es disponible! Es completamente gratis y es disponible ahora para los dispositivos iPhone, iPad, iPod touch, y Android. La app es una colección creciente de cuentos bíblicos, con animaciones activadas por tocar y actividades del aprendizaje, perfectos para ayudar que los niños aprendan las grandes historias de la Biblia. Vaya a bible.com/ninos en su dispositivo móvil para descargarla hoy."
+      email subject: "¡La Biblia App para Niños ya casi está aquí!"
+      email body: "¡La Biblia App para niños viene pronto! Me emociona que los niños tengan su propia Biblia App para que puedan aprender, jugar y crecer en la Palabra de Dios. Van a ser capaces de explorar una creciente colección de historias de la Biblia con animaciones táctiles activadas y actividades de aprendizaje. Y es gratis, por lo que toda la familia puede instalarlo en nuestros dispositivos iOS, Android y Kindle. Puedes tener una vista previa en bible.com/ninos"
     partner:
-      youversion: "YouVersion: La Bíblia App Más Popular Del Mundo"
+      youversion: "YouVersion: La Biblia App Más Popular Del Mundo"
       in partnership: "en alianza con"
       one hope: "One Hope: Extraordinario Contenido Bíblico Para Niños"
   now: "Ahora"
