--- a/config/locales/hu.yml
+++ b/config/locales/hu.yml
@@ -89,9 +89,28 @@ hu:
         title: "Csatlakoztatott Fiókok"
   kids:
     bible app: "A Biblia alkalmazás"
+    free download: "Töltsd le ingyen!"
+    app store: "Elérhető az App store-on"
+    google play: "Szerezd meg a Google Play-en"
+    amazon: "Elérhető az androidos Amazon Appstore-on"
+    app icon: "A Biblia alkalmazás gyerekeknek applikációs ikonja"
+    jesus and friends: "Jézus és barátok"
+    story text 1: "Az Éden kertje"
+    story text 2: "Az első karácsony"
+    story text 3: "József, Mária és a csecsemő Jézus a jászolban"
+    story text 4: "Angyalok jelennek meg a pásztoroknak, hogy tudtukra adják Krisztus születését"
+    story text 5: "Jézus meggyógyítja a bénát"
+    feature 1: "Egy ingyenes Biblia-élmény gyerekeidnek"
+    feature 5: "Gyerekbarát navigáció"
     share:
+      tell friends: "Mesélj barátaidnak a Biblia alkalmazásról gyerekeknek"
       facebook name: "Biblia alkalmazás gyermekeknek"
+      twitter hashtags: "gyerekekbiblia"
       email: "E-mail"
+      email subject: "A Biblia alkalmazás gyerekeknek megérkezett!"
+    partner:
+      youversion: "YouVersion: A világ legelterjedtebb Biblia alkalmazása"
+      one hope: "Egy remény: rendkívüli Biblia tartalom gyerekeknek"
   now: "Most"
   celebrating 50MM: "50 millió applikáció telepítésének ünneplése"
   link: "Link"
