--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -74,7 +74,7 @@ uk:
   meta:
     kids_app:
       title: "Програма Біблія для діточок"
-      description: "Програма Біблія для малят - це чудовий спосіб для ваших дітей пізнати біблійні оповіді про Ісуса, наш подарунок вічного життя та багато уроків, якими Бог навчає нас. У цьому інтерактивному пізнанні діти безпосередньо взаємодіють з Божим Словом через чудові візуальні враження, отримуючи бали за читання і збираючи скарби."
+      description: "Програма Біблія для малят - це чудовий спосіб для ваших дітей пізнати біблійні оповіді про Ісуса, подарунок вічного життя та багато уроків, яким Бог навчає нас. У цьому інтерактивному пізнанні діти безпосередньо взаємодіють з Божим Словом через чудові візуальні враження, отримуючи бали за читання і збираючи скарби."
     100million:
       title: "Розпочато з 100 мільйонів"
       description: "Програму Біблія вже встановлено майже 100 мільйонів разів - Неймовірне досягнення! Але ми тільки починаємо. Завантажте безкоштовну програму Біблія сьогодні, - і потім поділитися нею з друзями. Давайте творити історію разом."
@@ -113,7 +113,7 @@ uk:
     share:
       tell friends: "Розкажіть вашим друзям про програму Біблія для дітлахів."
       facebook name: "Програма Біблія для дітлахів"
-      facebook description: "Ось тут є програма Біблія для дітлахів! Завантажуйте вже сьогодні безкоштовну програму для iOS та Android: інтерактивні біблійні оповіді, які допоможуть вашій дитині вчитися, гратися та зростати із Божим Словом. www.bible.com/kids"
+      facebook description: "Ось тут є програма Біблія для дітлахів! Завантажуйте вже сьогодні безкоштовну програму для iOS та Android: інтерактивні біблійні оповіді, які допоможуть вашій дитині вчитися, гратися та зростати у Божому Слові. www.bible.com/kids"
       facebook link: "http://www.bible.com/kids"
       facebook redirect: "http://www.bible.com/kids"
       twitter description: "Ось тут є програма Біблія для дітлахів від @YouVersion! Вона - безкоштовна і пізнавальна. Завантажуйте: bible.com/kids"
